--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-28 [纽约市长亚当斯周五出庭，五项控罪最高可判数十年监禁](/articles/voa/1012242.md)
+
 9-28 [曾被称亲中的石破茂将成日本首相 专家：防卫更强硬，友台立场不变](/articles/voa/1012243.md)
 
 9-28 [印度钢铁协会警告说，中国钢材遭美国加征关税后或转向印度倾销](/articles/voa/1012244.md)
@@ -598,6 +600,4 @@
 9-17 [德国实施边境检查，移民辩论引发选举紧张](/articles/voa/1012540.md)
 
 9-17 [暗杀特朗普嫌疑人受到两项与枪支有关的指控](/articles/voa/1012541.md)
-
-9-17 [“一颗老鼠屎坏了一锅粥”孙雯被控为“中共代理人”后，一些在美华人这么看](/articles/voa/1012542.md)
 
