--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-28 [布林肯王毅在纽约会晤](/articles/voa/1012241.md)
+
 9-28 [纽约市长亚当斯周五出庭，五项控罪最高可判数十年监禁](/articles/voa/1012242.md)
 
 9-28 [曾被称亲中的石破茂将成日本首相 专家：防卫更强硬，友台立场不变](/articles/voa/1012243.md)
@@ -598,6 +600,4 @@
 9-17 [华盛顿：欢迎林大卫从中国监狱获释回美返家，将继续推动释放其他被不当拘押的美国人](/articles/voa/1012539.md)
 
 9-17 [德国实施边境检查，移民辩论引发选举紧张](/articles/voa/1012540.md)
-
-9-17 [暗杀特朗普嫌疑人受到两项与枪支有关的指控](/articles/voa/1012541.md)
 
