--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-28 [忿忿不平的内塔尼亚胡在联合国大会发表演讲](/articles/voa/1012238.md)
+
+9-28 [中国央行推出新刺激经济政策 短期股市反弹难掩经济结构性困境](/articles/voa/1012239.md)
+
+9-28 [以色列继续袭击贝鲁特真主党总部](/articles/voa/1012240.md)
+
 9-28 [布林肯王毅在纽约会晤](/articles/voa/1012241.md)
 
 9-28 [纽约市长亚当斯周五出庭，五项控罪最高可判数十年监禁](/articles/voa/1012242.md)
@@ -594,10 +600,4 @@
 9-17 [菲律宾：尽管撤离，但争议岛礁“并未落入中国手中”](/articles/voa/1012536.md)
 
 9-17 [拜登谴责针对特朗普的第二次未遂暗杀](/articles/voa/1012537.md)
-
-9-17 [美缉毒局努力阻止芬太尼流动之际关闭其两个中国办事处](/articles/voa/1012538.md)
-
-9-17 [华盛顿：欢迎林大卫从中国监狱获释回美返家，将继续推动释放其他被不当拘押的美国人](/articles/voa/1012539.md)
-
-9-17 [德国实施边境检查，移民辩论引发选举紧张](/articles/voa/1012540.md)
 
