--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-28 [菲律宾海警船重返萨比纳浅滩，中国船只数量激增，区域局势再升温](/articles/voa/1012231.md)
+
+9-28 [被控收受贿赂和非法竞选捐款的纽约市长亚当斯在法庭辩称无罪](/articles/voa/1012232.md)
+
 9-28 [中国和巴西敦促在乌克兰问题上不要威胁使用核武器](/articles/voa/1012233.md)
 
 9-28 [特朗普会晤泽连斯基并承诺：若当选将达成“对双方都好”的协议以结束俄乌战争](/articles/voa/1012234.md)
@@ -596,8 +600,4 @@
 9-17 [海地移民吃宠物之说引发舆论风波后，俄亥俄州城镇取消文化节活动](/articles/voa/1012529.md)
 
 9-17 [美军全部撤离军政府统治的尼日尔](/articles/voa/1012530.md)
-
-9-17 [美国务院官员：美将继续推动台湾有意义参与国际组织](/articles/voa/1012531.md)
-
-9-17 [特朗普险些再度遇刺 美国老百姓关注什么？](/articles/voa/1012532.md)
 
