--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-28 [中日外长纽约会晤谈及深圳日童遇刺案](/articles/dw/1024181.md)
+
 9-27 [德语媒体：危机不会消失](/articles/dw/1024182.md)
 
 9-27 [美国总统拜登下月将对德国进行“告别访问”](/articles/dw/1024183.md)
@@ -598,6 +600,4 @@
 8-26 [奧運表現亮眼 香港運動員卻嘆全職不易](/articles/dw/1024479.md)
 
 8-26 [澳參院通過挺台動議 專家：勇敢的舉動](/articles/dw/1024480.md)
-
-8-26 [中國研擬「房屋養老金」引論戰 爭議為何？](/articles/dw/1024481.md)
 
