--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-28 [专访华自强：与中国打交道近30年的前美国务院“中国屋”负责人如何看中国与美中关系前景？](/articles/voa/1012218.md)
+
+9-28 [为争夺全球影响力，中国操起一种廉价而有效的工具—制造虚假信息](/articles/voa/1012219.md)
+
+9-28 [“为2027年可能的美中战争做好准备” 美海军“33号计划”能否奏效？](/articles/voa/1012220.md)
+
 9-28 [“保5”出大招，降息降准降房贷 中国经济能走出泥淖吗？](/articles/voa/1012221.md)
 
 9-28 [深圳日籍男童遇刺身亡后，中共左打仇日、右打亲日言论?](/articles/voa/1012222.md)
@@ -594,10 +600,4 @@
 9-17 [台湾陆战队长驻东沙岛 专家：监控预警南部解放军动态](/articles/voa/1012516.md)
 
 9-17 [美国调查中国加大对美出口浓缩铀是否帮助俄罗斯规避制裁](/articles/voa/1012517.md)
-
-9-17 [彰显维护各国航行权利及自由，美国海军反潜巡逻机再次飞越台湾海峡](/articles/voa/1012518.md)
-
-9-17 [聿文视界：延迟退休是中国当局的国家违约](/articles/voa/1012519.md)
-
-9-17 [美日据称接近达成协议，限制对中国出口芯片技术](/articles/voa/1012520.md)
 
