--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-28 [以军轰炸黎巴嫩真主党总部，真主党领袖纳斯鲁拉等一众头目几乎被团灭](/articles/voa/1012217.md)
+
 9-28 [专访华自强：与中国打交道近30年的前美国务院“中国屋”负责人如何看中国与美中关系前景？](/articles/voa/1012218.md)
 
 9-28 [为争夺全球影响力，中国操起一种廉价而有效的工具—制造虚假信息](/articles/voa/1012219.md)
@@ -598,6 +600,4 @@
 9-17 [以色列称终止真主党对以北部袭击也是加沙战争目标之一](/articles/voa/1012515.md)
 
 9-17 [台湾陆战队长驻东沙岛 专家：监控预警南部解放军动态](/articles/voa/1012516.md)
-
-9-17 [美国调查中国加大对美出口浓缩铀是否帮助俄罗斯规避制裁](/articles/voa/1012517.md)
 
