--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-29 [海伦飓风穿越美国东南部，造成至少52人死亡，几百万人断电](/articles/voa/1012213.md)
+
 9-29 [“这里的中文媒体比中共还中共”—中共纪念建政75周年，新西兰华人对渗透感到担忧](/articles/voa/1012214.md)
 
 9-29 [黎巴嫩寻呼机袭击事件源头调查扩大至保加利亚和挪威](/articles/voa/1012215.md)
@@ -598,6 +600,4 @@
 9-18 [冯德莱恩提名欧盟委员会新成员，爱沙尼亚人主管外交政策，波兰人监督欧盟预算](/articles/voa/1012511.md)
 
 9-18 [真主党出现“重大安全漏洞”，寻呼机爆炸造成数以百计的人受伤](/articles/voa/1012512.md)
-
-9-17 [王文涛将在周四会见欧盟贸易专员，要欧盟改变关税立场希望渺茫](/articles/voa/1012513.md)
 
