--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-29 [每日一语 2024.9.28](/articles/cdt/336739.md)
+
+9-29 [古老板的老巢｜编制如此多娇，引无数英雄兑折腰！](/articles/cdt/336740.md)
+
+9-29 [老干体v｜网格员之死：一个农村女大学生的非典型奋斗史](/articles/cdt/336742.md)
+
+9-29 [现实的模样｜一个敢于向“寻衅滋事罪”说“不”的法律人，却因涉嫌“寻衅滋事”被抓了](/articles/cdt/336744.md)
+
 9-28 [特正经的张某某｜氓民的胜利](/articles/cdt/336747.md)
 
 9-28 [古老板的老巢｜股市狂欢之时，我有一点悲凉](/articles/cdt/336749.md)
@@ -592,12 +600,4 @@
 8-25 [情况有点复杂｜吹哨人吴彦荣被行拘15天！为啥不抓坚果兄弟？](/articles/cdt/337696.md)
 
 8-26 [【CDT周报】第184期：《黑神话：悟空》——“人心若是烧没了，修好一座破庙又有什么用呢？”](/articles/cdt/337699.md)
-
-8-24 [新新默存｜王五四：人们需要一个叛逆的黑悟空，最好是体制内的](/articles/cdt/337700.md)
-
-8-24 [维舟｜全红婵和谷爱凌](/articles/cdt/337702.md)
-
-8-24 [匿名网友｜过去两个月一些热点新闻的后续](/articles/cdt/337705.md)
-
-8-25 [【CDT报告汇】香港记协：业界评港新闻自由指数创新低，92%认为23条立法损害极大（外二篇）](/articles/cdt/337710.md)
 
