--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-29 [在联合国,俄罗斯没有显示准备讨论乌克兰和平的迹象](/articles/voa/1012210.md)
+
+9-29 [联大会议中国忙什么--力推乌战中国和平方案，捍卫“一中原则”，拉拢全球南方](/articles/voa/1012211.md)
+
 9-29 [拜登哈里斯称以色列击毙真主党的纳斯鲁拉是“正义之举”](/articles/voa/1012212.md)
 
 9-29 [海伦飓风穿越美国东南部，造成至少52人死亡，几百万人断电](/articles/voa/1012213.md)
@@ -596,8 +600,4 @@
 9-18 [五角大楼监察长：乌克兰是国防部监督的“第一要务”](/articles/voa/1012508.md)
 
 9-18 [以色列新增战争目标：阻止真主党对以色列北部的袭击](/articles/voa/1012509.md)
-
-9-18 [美国高级政府代表团本周访华，中国过剩产能问题将再成为争论焦点](/articles/voa/1012510.md)
-
-9-18 [冯德莱恩提名欧盟委员会新成员，爱沙尼亚人主管外交政策，波兰人监督欧盟预算](/articles/voa/1012511.md)
 
