--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-29 [中国如何通过深化政治和经济合作，扩大在孟加拉国的影响力](/articles/voa/1012209.md)
+
 9-29 [在联合国,俄罗斯没有显示准备讨论乌克兰和平的迹象](/articles/voa/1012210.md)
 
 9-29 [联大会议中国忙什么--力推乌战中国和平方案，捍卫“一中原则”，拉拢全球南方](/articles/voa/1012211.md)
@@ -598,6 +600,4 @@
 9-18 [联合国调查组：委内瑞拉国内的压迫在总统选举后恶化](/articles/voa/1012507.md)
 
 9-18 [五角大楼监察长：乌克兰是国防部监督的“第一要务”](/articles/voa/1012508.md)
-
-9-18 [以色列新增战争目标：阻止真主党对以色列北部的袭击](/articles/voa/1012509.md)
 
