--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-29 [以色列杀害纳斯鲁拉 多名国际领袖忧心冲突升级](/articles/voa/1012207.md)
+
+9-29 [台湾外交部谴责中国外长王毅于联合国大会上的涉台言论 重申台湾与中国互不隶属](/articles/voa/1012208.md)
+
 9-29 [中国如何通过深化政治和经济合作，扩大在孟加拉国的影响力](/articles/voa/1012209.md)
 
 9-29 [在联合国,俄罗斯没有显示准备讨论乌克兰和平的迹象](/articles/voa/1012210.md)
@@ -596,8 +600,4 @@
 9-18 [德国官员敦促欧盟与中国就电动汽车关税问题达成解决方案](/articles/voa/1012505.md)
 
 9-18 [国家媒体说，伊朗总统保证深化与莫斯科的关系](/articles/voa/1012506.md)
-
-9-18 [联合国调查组：委内瑞拉国内的压迫在总统选举后恶化](/articles/voa/1012507.md)
-
-9-18 [五角大楼监察长：乌克兰是国防部监督的“第一要务”](/articles/voa/1012508.md)
 
