--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-29 [瑞士表示支持中国主导的和平计划 基辅方面表示失望](/articles/dw/1024161.md)
+
 9-29 [中国外长：2758号决议没有灰色地带 台外交部：中國应停止誤導國際視聽](/articles/dw/1024162.md)
 
 9-29 [消费降级 房市低迷——上海街头民众怎么看？](/articles/dw/1024163.md)
@@ -598,6 +600,4 @@
 8-27 [中国承认95岁天主教「地下主教」](/articles/dw/1024459.md)
 
 8-27 [Telegram创办人杜洛夫是何人？](/articles/dw/1024460.md)
-
-8-27 [美国印度裔会全力为卡玛拉·哈里斯助选吗？](/articles/dw/1024461.md)
 
