--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-29 [路透：伊朗最高领导人被转移至安全地点](/articles/voa/1012205.md)
+
 9-29 [瑞士支持中巴为乌克兰制定的和平计划 朝鲜批评美国向乌克兰提供军援是“玩火”](/articles/voa/1012206.md)
 
 9-29 [以色列杀害纳斯鲁拉 多名国际领袖忧心冲突升级](/articles/voa/1012207.md)
@@ -598,6 +600,4 @@
 9-18 [蓬佩奥告诉台湾入联宣达团：遗憾国务卿任内未做到保护香港自由，盼美继续为台湾做更多](/articles/voa/1012503.md)
 
 9-18 [缅甸侨民在中国驻华盛顿大使馆前抗议](/articles/voa/1012504.md)
-
-9-18 [德国官员敦促欧盟与中国就电动汽车关税问题达成解决方案](/articles/voa/1012505.md)
 
