--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-29 [奥地利大选：投票开始 极右翼政党期待历史性胜利](/articles/dw/1024156.md)
+
+9-29 [德国特斯拉工厂病假率超高 人事部对病假员工突击家访引争议](/articles/dw/1024157.md)
+
 9-29 [真主党领袖丧生后 多国呼吁停火 伊朗要求安理会召开紧急会议](/articles/dw/1024158.md)
 
 9-29 [真主党领袖丧生后 多国呼吁停火 伊朗要求安理会召开会议](/articles/dw/1024159.md)
@@ -596,8 +600,4 @@
 8-28 [制衡中国？太平洋岛国达成区域警务计划](/articles/dw/1024454.md)
 
 8-28 [盛世？危时？鸟瞰中国经济](/articles/dw/1024455.md)
-
-8-28 [沙利文或替拜习会铺路 王毅：沟通应更有建设性](/articles/dw/1024456.md)
-
-8-27 [美军护送菲律宾舰船？美印太司令官持开放态度](/articles/dw/1024457.md)
 
