--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-29 [俄乌互相袭击，克里姆林宫称俄将正式确立其修订后的核威慑战略](/articles/voa/1012200.md)
+
 9-29 [台商撤离中国成显学 下一波日商首当其冲？](/articles/voa/1012201.md)
 
 9-29 [世界媒体看中国: 习近平的炮舰外交](/articles/voa/1012202.md)
@@ -598,6 +600,4 @@
 9-18 [英国港人媒体遭“国家级黑客”试图入侵 上月曾发表针对中国驻英使馆调查报道](/articles/voa/1012498.md)
 
 9-18 [彭定康呼吁解冻居英港人强积金，汇丰渣打回应引争议](/articles/voa/1012499.md)
-
-9-18 [朝鲜可能在美国总统大选前升级紧张局势](/articles/voa/1012500.md)
 
