--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-30 [应急人员和物资紧急调往北卡罗来纳州，佛罗里达州同时清理海伦飓风的损失](/articles/voa/1012194.md)
+
 9-30 [以色列袭击也门胡塞武装目标，导致至少4人死亡](/articles/voa/1012195.md)
 
 9-30 [抗衡中国垄断关键矿物，美国结合盟友出新招](/articles/voa/1012196.md)
@@ -598,6 +600,4 @@
 9-18 [马来西亚国王周四起访华 寻求基础设施支持](/articles/voa/1012492.md)
 
 9-18 [美空军将领：俄罗斯比入侵乌克兰前规模更强大](/articles/voa/1012493.md)
-
-9-18 [台湾金阿波罗公司称其未生产黎巴嫩爆炸中使用的寻呼机](/articles/voa/1012494.md)
 
