--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-30 [美国总统竞选进入最危险时期，候选人如何应对外国干预](/articles/nyt/1042347.md)
+
 9-27 [中国股市创16年来最大单周涨幅](/articles/nyt/1042348.md)
 
 9-27 [为何马斯克这样的硅谷精英会支持特朗普](/articles/nyt/1042349.md)
@@ -598,6 +600,4 @@
 6-25 [加沙战争将进入怎样的“新阶段”？](/articles/nyt/1042645.md)
 
 6-25 [中国异见人士权平首次公开讲述逃亡韩国细节](/articles/nyt/1042646.md)
-
-6-25 [韩国锂电池工厂火灾，18名中国劳工遇难](/articles/nyt/1042647.md)
 
