--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+9-30 [被困国际空间站的美国宇航员迎来明年将带他们回家的SpaceX太空舱](/articles/voa/1012191.md)
+
+9-30 [中国10月底前预计下调存量房贷利率 多省市放松购房限制](/articles/voa/1012192.md)
+
+9-30 [化工厂起火，居民疏散，亚特兰大市郊外的州际公路关闭](/articles/voa/1012193.md)
+
 9-30 [应急人员和物资紧急调往北卡罗来纳州，佛罗里达州同时清理海伦飓风的损失](/articles/voa/1012194.md)
 
 9-30 [以色列袭击也门胡塞武装目标，导致至少4人死亡](/articles/voa/1012195.md)
@@ -594,10 +600,4 @@
 9-18 [真主党寻呼机爆炸案中发现从台湾到匈牙利到摩萨德的神秘踪迹](/articles/voa/1012489.md)
 
 9-18 [中国针对美国对台军售进行报复，制裁九家美国军工企业](/articles/voa/1012490.md)
-
-9-18 [日本防卫省：中国航母首次进入日本领海毗连区](/articles/voa/1012491.md)
-
-9-18 [马来西亚国王周四起访华 寻求基础设施支持](/articles/voa/1012492.md)
-
-9-18 [美空军将领：俄罗斯比入侵乌克兰前规模更强大](/articles/voa/1012493.md)
 
