--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-30 [【CDT关注】WOMEN我们｜当父母成为国家的敌人，未成年的孩子们成为了“最脆弱的迫害对象”](/articles/cdt/336731.md)
+
+9-30 [【CDT关注】“中国长期以来盛行的极端民族主义及仇日教育，放纵了矇昧与罪恶”（外二篇）](/articles/cdt/336734.md)
+
 9-29 [每日一语 2024.9.28](/articles/cdt/336739.md)
 
 9-29 [古老板的老巢｜编制如此多娇，引无数英雄兑折腰！](/articles/cdt/336740.md)
@@ -596,8 +600,4 @@
 8-25 [歪脑｜维吾尔族人被迫加工渔产品 全球海鲜供应链遭污染](/articles/cdt/337692.md)
 
 8-25 [【新生空间】季风微读圈｜从上海到华盛顿，季风书园异域重生](/articles/cdt/337693.md)
-
-8-25 [岭南酷儿｜致应勇检察长的公开信：请派给我一名《九部的检察官》，为少年的他立案](/articles/cdt/337694.md)
-
-8-25 [情况有点复杂｜吹哨人吴彦荣被行拘15天！为啥不抓坚果兄弟？](/articles/cdt/337696.md)
 
