--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-30 [真主党领导人遇袭身亡将中东冲突推向新领域](/articles/nyt/1042346.md)
+
 9-30 [美国总统竞选进入最危险时期，候选人如何应对外国干预](/articles/nyt/1042347.md)
 
 9-27 [中国股市创16年来最大单周涨幅](/articles/nyt/1042348.md)
@@ -598,6 +600,4 @@
 6-25 [他曾冒死记录光州民主抗争，却隐姓埋名度过半生](/articles/nyt/1042644.md)
 
 6-25 [加沙战争将进入怎样的“新阶段”？](/articles/nyt/1042645.md)
-
-6-25 [中国异见人士权平首次公开讲述逃亡韩国细节](/articles/nyt/1042646.md)
 
