--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -13,6 +13,8 @@
 
 9-30 [【CDT关注】“中国长期以来盛行的极端民族主义及仇日教育，放纵了矇昧与罪恶”（外二篇）](/articles/cdt/336734.md)
 
+9-30 [【CDT周报】第188期：古有拍照勾魂，今有苹果爆炸](/articles/cdt/336735.md)
+
 9-29 [每日一语 2024.9.28](/articles/cdt/336739.md)
 
 9-29 [古老板的老巢｜编制如此多娇，引无数英雄兑折腰！](/articles/cdt/336740.md)
@@ -598,6 +600,4 @@
 8-26 [【404文库】虬髯客好忙｜你给储户赋红码，我们写文秒被删](/articles/cdt/337673.md)
 
 8-25 [潜水鱼X｜《黑神话：悟空》真的不需要女人吗？](/articles/cdt/337676.md)
-
-8-25 [每日一语 2024.8.24](/articles/cdt/337685.md)
 
