--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-30 [中國欲下調現有房貸利率 學者：提油救火](/articles/dw/1024154.md)
+
 9-29 [黎巴嫩总理：以色列袭击可能造成多达100万黎巴嫩人流离失所](/articles/dw/1024155.md)
 
 9-29 [奥地利大选：投票开始 极右翼政党期待历史性胜利](/articles/dw/1024156.md)
@@ -598,6 +600,4 @@
 8-28 [基辅：第二次乌克兰和平峰会应在全球南方国家举行](/articles/dw/1024452.md)
 
 8-28 [全球科技集群排名：中国连续两年数量最多](/articles/dw/1024453.md)
-
-8-28 [制衡中国？太平洋岛国达成区域警务计划](/articles/dw/1024454.md)
 
