--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-30 [奥地利极右翼政党在国民议会选举中赢得二战以来的首次胜利](/articles/voa/1012189.md)
+
+9-30 [洪水和山体滑坡已造成尼泊尔至少151人遇难](/articles/voa/1012190.md)
+
 9-30 [被困国际空间站的美国宇航员迎来明年将带他们回家的SpaceX太空舱](/articles/voa/1012191.md)
 
 9-30 [中国10月底前预计下调存量房贷利率 多省市放松购房限制](/articles/voa/1012192.md)
@@ -596,8 +600,4 @@
 9-18 [乌军无人机大规模攻击俄纵深，触发一主要军火库地震般爆炸](/articles/voa/1012487.md)
 
 9-18 [“918”敏感日，深圳一日本男孩被凶手刺伤，外国人在华安全再次引起关注](/articles/voa/1012488.md)
-
-9-18 [真主党寻呼机爆炸案中发现从台湾到匈牙利到摩萨德的神秘踪迹](/articles/voa/1012489.md)
-
-9-18 [中国针对美国对台军售进行报复，制裁九家美国军工企业](/articles/voa/1012490.md)
 
