--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -29,6 +29,8 @@
 
 9-28 [忘川边的但丁｜涨成这样了，我为什么还不去炒股票](/articles/cdt/336755.md)
 
+9-30 [中国政治及宗教受难者后援会（澳大利亚）| 公告：2024年度（第一届）中国当代英雄母亲奖颁奖词](/articles/cdt/336758.md)
+
 9-28 [木蹊说｜大放水，还不足以解决根本问题](/articles/cdt/336763.md)
 
 9-28 [剑客写字的地方｜生育率降低，学校要承担很大一部分责任](/articles/cdt/336764.md)
@@ -598,6 +600,4 @@
 8-26 [【404文库】建设性意见｜全国就2辆罐车混运化工食用油，被记者精准发现了？](/articles/cdt/337664.md)
 
 8-26 [【404文库】虬髯客好忙｜你给储户赋红码，我们写文秒被删](/articles/cdt/337673.md)
-
-8-25 [潜水鱼X｜《黑神话：悟空》真的不需要女人吗？](/articles/cdt/337676.md)
 
