--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-30 [财新PMI显示中国9月份工厂活动明显降温](/articles/voa/1012188.md)
+
 9-30 [奥地利极右翼政党在国民议会选举中赢得二战以来的首次胜利](/articles/voa/1012189.md)
 
 9-30 [洪水和山体滑坡已造成尼泊尔至少151人遇难](/articles/voa/1012190.md)
@@ -598,6 +600,4 @@
 9-19 [黎巴嫩再传爆炸声，手持对讲机引爆造成三人死亡，数十人受伤](/articles/voa/1012486.md)
 
 9-18 [乌军无人机大规模攻击俄纵深，触发一主要军火库地震般爆炸](/articles/voa/1012487.md)
-
-9-18 [“918”敏感日，深圳一日本男孩被凶手刺伤，外国人在华安全再次引起关注](/articles/voa/1012488.md)
 
