--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+9-30 [在香港，哪些行为会被判处“煽动叛乱”罪？](/articles/nyt/1042344.md)
+
 9-30 [为何全球大国无力阻止中东战事](/articles/nyt/1042345.md)
 
 9-30 [真主党领导人遇袭身亡将中东冲突推向新领域](/articles/nyt/1042346.md)
@@ -598,6 +600,4 @@
 6-26 [中国人买买买造就东南亚“榴莲富豪”](/articles/nyt/1042642.md)
 
 6-26 [嫦娥六号实现世界首次月球背面采样返回](/articles/nyt/1042643.md)
-
-6-25 [他曾冒死记录光州民主抗争，却隐姓埋名度过半生](/articles/nyt/1042644.md)
 
