--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-30 [乌克兰：在最新一轮袭击中击落了67架俄罗斯无人机](/articles/voa/1012187.md)
+
 9-30 [财新PMI显示中国9月份工厂活动明显降温](/articles/voa/1012188.md)
 
 9-30 [奥地利极右翼政党在国民议会选举中赢得二战以来的首次胜利](/articles/voa/1012189.md)
@@ -598,6 +600,4 @@
 9-19 [芬兰总统呼吁扩大联合国安理会，废除一票否决，暂停侵略国家成员资格](/articles/voa/1012485.md)
 
 9-19 [黎巴嫩再传爆炸声，手持对讲机引爆造成三人死亡，数十人受伤](/articles/voa/1012486.md)
-
-9-18 [乌军无人机大规模攻击俄纵深，触发一主要军火库地震般爆炸](/articles/voa/1012487.md)
 
