--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+9-30 [日本即将上任的新首相石破茂内阁大致底定](/articles/voa/1012186.md)
+
 9-30 [乌克兰：在最新一轮袭击中击落了67架俄罗斯无人机](/articles/voa/1012187.md)
 
 9-30 [财新PMI显示中国9月份工厂活动明显降温](/articles/voa/1012188.md)
@@ -598,6 +600,4 @@
 9-19 [中国95个城市“鹤岗化” 房价跌成白菜价](/articles/voa/1012484.md)
 
 9-19 [芬兰总统呼吁扩大联合国安理会，废除一票否决，暂停侵略国家成员资格](/articles/voa/1012485.md)
-
-9-19 [黎巴嫩再传爆炸声，手持对讲机引爆造成三人死亡，数十人受伤](/articles/voa/1012486.md)
 
