--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+9-30 [周五举行关税表决 欧盟称之后还可继续谈](/articles/dw/1024151.md)
+
 9-30 [金門立委陳玉珍：「金廈同城生活圈」已成形](/articles/dw/1024152.md)
 
 9-30 [美宣布史上最大笔对台军援  中方： “以武助独”必将引火烧身](/articles/dw/1024153.md)
@@ -598,6 +600,4 @@
 8-28 [美国国家安全顾问沙利文在中国谈了些什么？](/articles/dw/1024449.md)
 
 8-28 [金正恩监督新型多管火箭发射器试验](/articles/dw/1024450.md)
-
-8-28 [香港“47人”案：“长毛”梁国雄等人毋怨成为阶下囚](/articles/dw/1024451.md)
 
