--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+9-30 [以色列扩大对黎巴嫩的袭击 首次空袭贝鲁特市中心](/articles/voa/1012184.md)
+
+9-30 [法国极右领导人勒庞涉嫌挪用欧盟资金出庭受审](/articles/voa/1012185.md)
+
 9-30 [日本即将上任的新首相石破茂内阁大致底定](/articles/voa/1012186.md)
 
 9-30 [乌克兰：在最新一轮袭击中击落了67架俄罗斯无人机](/articles/voa/1012187.md)
@@ -596,8 +600,4 @@
 9-19 [美联储大幅下调基准利率半个百分点，显示通胀治理结束](/articles/voa/1012482.md)
 
 9-19 [消费持续疲软 中国人热议“通缩”](/articles/voa/1012483.md)
-
-9-19 [中国95个城市“鹤岗化” 房价跌成白菜价](/articles/voa/1012484.md)
-
-9-19 [芬兰总统呼吁扩大联合国安理会，废除一票否决，暂停侵略国家成员资格](/articles/voa/1012485.md)
 
