--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-30 [长平漫游：火车又晚点了](/articles/dw/1024149.md)
+
+9-30 [奥地利大选 极右翼政党获胜](/articles/dw/1024150.md)
+
 9-30 [周五举行关税表决 欧盟称之后还可继续谈](/articles/dw/1024151.md)
 
 9-30 [金門立委陳玉珍：「金廈同城生活圈」已成形](/articles/dw/1024152.md)
@@ -596,8 +600,4 @@
 8-29 [调查：近一半德企遭中国黑客攻击](/articles/dw/1024447.md)
 
 8-29 [出现这些情况 你就要当心电子游戏上瘾了！](/articles/dw/1024448.md)
-
-8-28 [美国国家安全顾问沙利文在中国谈了些什么？](/articles/dw/1024449.md)
-
-8-28 [金正恩监督新型多管火箭发射器试验](/articles/dw/1024450.md)
 
