--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-30 [建设性意见｜看这股市数据，恍惚间以为经济基本面发生巨变](/articles/cdt/336704.md)
+
 9-30 [【告别信】幸存者笔记｜在昨天，这篇2018年的文章终于被删掉了](/articles/cdt/336707.md)
 
 9-30 [功夫财经｜用了货币政策的大杀器，还得有真正的市场化改革](/articles/cdt/336709.md)
@@ -598,6 +600,4 @@
 8-26 [古老板的老巢｜关于住房养老金，他们都说错了](/articles/cdt/337654.md)
 
 8-26 [每日一语 2024.8.25](/articles/cdt/337657.md)
-
-8-26 [城市的地得｜“房屋养老”，最重要甚至不是钱的问题](/articles/cdt/337659.md)
 
