--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+9-30 [投资者害怕“错过车”，中国股市周一疯涨，创2008年来单日最大涨幅](/articles/voa/1012179.md)
+
+9-30 [拜登批准向台湾提供5.67亿美元军援，北京批美“严重违反”一中原则](/articles/voa/1012180.md)
+
+9-30 [中共建政75年 分析：习近平影响力仍存，国內外挑战恐加剧](/articles/voa/1012181.md)
+
+9-30 [中共建政75年，中西学者如何评价](/articles/voa/1012182.md)
+
 9-30 [聿文视界：民营企业家是中共自家人？](/articles/voa/1012183.md)
 
 9-30 [以色列扩大对黎巴嫩的袭击 首次空袭贝鲁特市中心](/articles/voa/1012184.md)
@@ -592,12 +600,4 @@
 9-19 [黎巴嫩真主党遭到新一轮对讲机爆炸袭击 已有14人死亡和450人受伤](/articles/voa/1012477.md)
 
 9-19 [出售含芬太尼药丸男子被判对年轻女顾客死亡赔偿580万美元](/articles/voa/1012478.md)
-
-9-19 [执法官员反驳有关特朗普集会附近汽车中发现爆炸物的网上虚假报道](/articles/voa/1012479.md)
-
-9-19 [中国男子的非法进入让人质疑台湾的海防](/articles/voa/1012480.md)
-
-9-19 [美国发现并摧毁中国第二个主要黑客组织](/articles/voa/1012481.md)
-
-9-19 [美联储大幅下调基准利率半个百分点，显示通胀治理结束](/articles/voa/1012482.md)
 
