--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+9-30 [深涵说｜从香港卫视被封说起](/articles/cdt/336695.md)
+
+9-30 [四环青年｜公职人员减免50%，交物业费也分三六九等？](/articles/cdt/336698.md)
+
+9-30 [老斯基财经｜就在10000点会师，胜利大会师](/articles/cdt/336699.md)
+
+9-30 [基本常识｜150亿？可能是中国水分含量最高的昭通苹果](/articles/cdt/336702.md)
+
 9-30 [建设性意见｜看这股市数据，恍惚间以为经济基本面发生巨变](/articles/cdt/336704.md)
 
 9-30 [【告别信】幸存者笔记｜在昨天，这篇2018年的文章终于被删掉了](/articles/cdt/336707.md)
@@ -592,12 +600,4 @@
 8-27 [浣花溪杜甫｜有且只有两辆油罐车混装，记者火眼金睛一下就全抓了](/articles/cdt/337646.md)
 
 8-26 [风声OPINION｜怎样把躺平的年轻人拉起来？](/articles/cdt/337648.md)
-
-8-27 [【网络民议】“这种震耳欲聋的沉默何尝不是现在这个时代的写照”](/articles/cdt/337649.md)
-
-8-26 [学问批判｜官方辟谣了吗？我还是有疑问！](/articles/cdt/337651.md)
-
-8-26 [古老板的老巢｜关于住房养老金，他们都说错了](/articles/cdt/337654.md)
-
-8-26 [每日一语 2024.8.25](/articles/cdt/337657.md)
 
