--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+9-30 [中国股市上演狂飙  刺激措施推动股市翻红](/articles/dw/1024147.md)
+
+9-30 [客座评论：中国议题为何没成为美国大选焦点？](/articles/dw/1024148.md)
+
 9-30 [长平漫游：火车又晚点了](/articles/dw/1024149.md)
 
 9-30 [奥地利大选 极右翼政党获胜](/articles/dw/1024150.md)
@@ -596,8 +600,4 @@
 8-29 [习近平、张又侠分别会见沙利文](/articles/dw/1024445.md)
 
 8-29 [仍有欧盟国家使用俄天然气 泽连斯基：过境协议不延长](/articles/dw/1024446.md)
-
-8-29 [调查：近一半德企遭中国黑客攻击](/articles/dw/1024447.md)
-
-8-29 [出现这些情况 你就要当心电子游戏上瘾了！](/articles/dw/1024448.md)
 
