--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-1 [美国向中东地区增派几千兵力以加强安全](/articles/voa/1012171.md)
+
+10-1 [香港终审法院海外法官范理申以个人理由辞任 一年五人离开](/articles/voa/1012172.md)
+
 10-1 [中国要在风险与挑战重重的南苏丹建现代化炼油厂为哪般？](/articles/voa/1012173.md)
 
 10-1 [中国A股“贺国庆”创史上最高 分析：短期奏效 长期无助](/articles/voa/1012174.md)
@@ -596,8 +600,4 @@
 9-19 [美副国务卿：主导美中竞争的领域是技术](/articles/voa/1012469.md)
 
 9-19 [数千印度人被诱骗至东南亚 在中国人经营的“诈骗中心”从事网络犯罪](/articles/voa/1012470.md)
-
-9-19 [“我终于有儿子了！”: 揭秘俄罗斯“太子”们孤独而隐秘的生活](/articles/voa/1012471.md)
-
-9-19 [加州签署针对深伪政治广告、虚假信息的立法](/articles/voa/1012472.md)
 
