--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-1 [欧盟推迟对华电动汽车关税表决，内部利益博弈引发妥协预期](/articles/voa/1012156.md)
+
+10-1 [中共建政75周年之际，海外民运人士举行“国是会议”：推翻中共暴政](/articles/voa/1012157.md)
+
 10-1 [4.5万美国码头工人预计午夜开始罢工](/articles/voa/1012158.md)
 
 10-1 [原声带·前解放军中尉高峰：亲历中国核试验秘密](/articles/voa/1012159.md)
@@ -596,8 +600,4 @@
 9-20 [普京宣布扩大无人机产量，今年增加至140万架](/articles/voa/1012454.md)
 
 9-20 [俄军空袭乌能源基础设施 UN称袭击电网可能违反人道主义法律](/articles/voa/1012455.md)
-
-9-20 [英国工党资深政治家曼德尔森呼吁改善对华关系，涉港言论引发争议](/articles/voa/1012456.md)
-
-9-20 [欧盟八月汽车销售大滑坡，王文涛游说欧盟变得更加艰难](/articles/voa/1012457.md)
 
