--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-1 [上海超市持刀袭击事件致3死15伤](/articles/voa/1012154.md)
+
+10-1 [韩国国军日阅兵活动登场 朝鲜谴责美国部署核战略武器](/articles/voa/1012155.md)
+
 10-1 [欧盟推迟对华电动汽车关税表决，内部利益博弈引发妥协预期](/articles/voa/1012156.md)
 
 10-1 [中共建政75周年之际，海外民运人士举行“国是会议”：推翻中共暴政](/articles/voa/1012157.md)
@@ -596,8 +600,4 @@
 9-20 [拜登将于9月26日在白宫会晤泽连斯基](/articles/voa/1012452.md)
 
 9-20 [美国制裁为俄朝间支付提供便利的实体与个人](/articles/voa/1012453.md)
-
-9-20 [普京宣布扩大无人机产量，今年增加至140万架](/articles/voa/1012454.md)
-
-9-20 [俄军空袭乌能源基础设施 UN称袭击电网可能违反人道主义法律](/articles/voa/1012455.md)
 
