--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-1 [拜登大手筆對台軍援 分析：為白宮易主分散風險](/articles/dw/1024145.md)
+
 10-1 [中共建政75週年 習近平：堅持黨總攬全局](/articles/dw/1024146.md)
 
 9-30 [中国股市上演狂飙  刺激措施推动股市翻红](/articles/dw/1024147.md)
@@ -598,6 +600,4 @@
 8-29 [立場新聞案罪成，恐影響香港新聞自由？](/articles/dw/1024443.md)
 
 8-29 [谜团即将解开?专家称已定位MH370残骸](/articles/dw/1024444.md)
-
-8-29 [习近平、张又侠分别会见沙利文](/articles/dw/1024445.md)
 
