--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-1 [美军抨击俄罗斯战机在阿拉斯加附近的“不安全操作”](/articles/voa/1012151.md)
+
 10-1 [调查网络诈骗的柬埔寨获奖记者被捕](/articles/voa/1012152.md)
 
 10-1 [俄罗斯计划在2025年大幅增加国防开支](/articles/voa/1012153.md)
@@ -598,6 +600,4 @@
 9-20 [《金融时报》：对大众汽车新疆工厂的审计未达到国际标准](/articles/voa/1012449.md)
 
 9-20 [日本男孩深圳遇袭身亡，中国网民评价两极分化：“养蛊反噬”“因果报应”](/articles/voa/1012450.md)
-
-9-20 [对2019年武汉市场动物的新基因分析或有助于找到COVID-19起源](/articles/voa/1012451.md)
 
