--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-1 [北约新秘书长：中国是俄对乌战争决定性助推者，而挺俄应有后果](/articles/voa/1012146.md)
+
 10-1 [“没有国庆，只有国殇”在美华裔民主人权团体以及多族裔集会为中共“送葬”](/articles/voa/1012147.md)
 
 10-1 [中国洋媳妇杨思安：中国改开只是演给外商的一场戏](/articles/voa/1012148.md)
@@ -598,6 +600,4 @@
 9-20 [真主党首领承认寻呼机、对讲机爆炸袭击造成“严重的打击”，同时称以色列越过“红线”](/articles/voa/1012444.md)
 
 9-20 [拜登称美联储通过降息发出“进展宣言”](/articles/voa/1012445.md)
-
-9-20 [美台国防工业会议将举行,主办方电邮系统遭网络袭击](/articles/voa/1012446.md)
 
