--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-1 [中国女子陷间谍门 克拉：与我本人工作无关联](/articles/dw/1024138.md)
+
+10-1 [山陀兒来袭 台湾军队“迎战”](/articles/dw/1024139.md)
+
 10-1 [几年前的欣喜和乐观到哪里去了？](/articles/dw/1024140.md)
 
 10-1 [以色列对黎巴嫩南部发起地面攻势  百万人流离失所](/articles/dw/1024141.md)
@@ -596,8 +600,4 @@
 8-30 [特朗普出新书《拯救美国》 为会晤普京辩护](/articles/dw/1024436.md)
 
 8-30 [留學生人數限制下 中國學子還想去澳洲嗎？](/articles/dw/1024437.md)
-
-8-30 [留學生人數限制下 中國學子還會去澳洲嗎？](/articles/dw/1024438.md)
-
-8-30 [从亚洲到欧洲 畅游博斯普鲁斯海峡](/articles/dw/1024439.md)
 
