--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-1 [中国官媒：美中商务部长即将通话，讨论双边经贸关系](/articles/voa/1012145.md)
+
 10-1 [北约新秘书长：中国是俄对乌战争决定性助推者，而挺俄应有后果](/articles/voa/1012146.md)
 
 10-1 [“没有国庆，只有国殇”在美华裔民主人权团体以及多族裔集会为中共“送葬”](/articles/voa/1012147.md)
@@ -598,6 +600,4 @@
 9-20 [美议员跨党提出法案，加大力度打击强迫维吾尔人劳动](/articles/voa/1012443.md)
 
 9-20 [真主党首领承认寻呼机、对讲机爆炸袭击造成“严重的打击”，同时称以色列越过“红线”](/articles/voa/1012444.md)
-
-9-20 [拜登称美联储通过降息发出“进展宣言”](/articles/voa/1012445.md)
 
