--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-1 [自行车与核弹：北约秘书长权力交接时刻的挑战](/articles/dw/1024136.md)
+
+10-1 [不生小孩养“毛孩” 中国城市宠物数量或超过幼童](/articles/dw/1024137.md)
+
 10-1 [中国女子陷间谍门 克拉：与我本人工作无关联](/articles/dw/1024138.md)
 
 10-1 [山陀兒来袭 台湾军队“迎战”](/articles/dw/1024139.md)
@@ -596,8 +600,4 @@
 8-30 [太平洋岛国论坛重申台湾参与地位不变 中国特使：必须修正](/articles/dw/1024434.md)
 
 8-30 [专访：特朗普当选对中国来说更糟糕](/articles/dw/1024435.md)
-
-8-30 [特朗普出新书《拯救美国》 为会晤普京辩护](/articles/dw/1024436.md)
-
-8-30 [留學生人數限制下 中國學子還想去澳洲嗎？](/articles/dw/1024437.md)
 
