--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-1 [以色列地面部队进入黎巴嫩，与真主党爆发激战](/articles/voa/1012143.md)
+
+10-1 [中共建政75周年 中国中产感叹“国运很丧”](/articles/voa/1012144.md)
+
 10-1 [中国官媒：美中商务部长即将通话，讨论双边经贸关系](/articles/voa/1012145.md)
 
 10-1 [北约新秘书长：中国是俄对乌战争决定性助推者，而挺俄应有后果](/articles/voa/1012146.md)
@@ -596,8 +600,4 @@
 9-20 [欧盟推迟对华电动汽车关税表决 欧中关税战前景不明](/articles/voa/1012441.md)
 
 9-20 [十余名共和党参议员推出与中国竞争的“实质性”法案](/articles/voa/1012442.md)
-
-9-20 [美议员跨党提出法案，加大力度打击强迫维吾尔人劳动](/articles/voa/1012443.md)
-
-9-20 [真主党首领承认寻呼机、对讲机爆炸袭击造成“严重的打击”，同时称以色列越过“红线”](/articles/voa/1012444.md)
 
