--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-2 [曾武律师｜关于曾武律师因关闭休息区信号屏蔽器拟被行政处罚5日的声明](/articles/cdt/336660.md)
+
+10-2 [家传研究员｜昨夜入沪杀三人，当大城市成为泄愤目标……](/articles/cdt/336661.md)
+
+10-2 [走读新生｜这些事透露的信号，老百姓再不警觉就危险了](/articles/cdt/336662.md)
+
 10-1 [常识流通处｜“准备70W满仓干”；“建议留3000，到时跑外卖需要一辆电动车”](/articles/cdt/336667.md)
 
 10-1 [天涯行路｜女子“造谣”下雪被抓，挺吓人的](/articles/cdt/336669.md)
@@ -594,10 +600,4 @@
 8-28 [【404视频】章北海official｜互联网不信任网证网号，历史记住河南红码](/articles/cdt/337602.md)
 
 8-28 [人物｜当AI入侵大学论文](/articles/cdt/337607.md)
-
-8-28 [正面连接｜一个基层科员的官场修养](/articles/cdt/337609.md)
-
-8-28 [槽边往事｜我不理解](/articles/cdt/337611.md)
-
-8-28 [知识分子｜在精神科门诊里，孩子们的年纪越来越小](/articles/cdt/337613.md)
 
