--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -9,6 +9,8 @@
 
 10-2 [走读新生｜这些事透露的信号，老百姓再不警觉就危险了](/articles/cdt/336662.md)
 
+10-2 [【网络民议】女子“造谣”下雪被抓，网友：天气预报不准可不可以刑拘](/articles/cdt/336663.md)
+
 10-1 [常识流通处｜“准备70W满仓干”；“建议留3000，到时跑外卖需要一辆电动车”](/articles/cdt/336667.md)
 
 10-1 [天涯行路｜女子“造谣”下雪被抓，挺吓人的](/articles/cdt/336669.md)
@@ -598,6 +600,4 @@
 8-28 [旧闻评论｜公众对政策的误解从来不是问题](/articles/cdt/337599.md)
 
 8-28 [【404视频】章北海official｜互联网不信任网证网号，历史记住河南红码](/articles/cdt/337602.md)
-
-8-28 [人物｜当AI入侵大学论文](/articles/cdt/337607.md)
 
