--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-2 [中共建政75周年 示威者抗议中共在伦敦兴建新大使馆的计划](/articles/voa/1012121.md)
+
+10-2 [十一流亡港人示威 促美国公众施压参议员通过港经贸办认证法](/articles/voa/1012122.md)
+
 10-2 [以色列：伊朗统治者发动导弹攻击是犯下“大错”；美国：初步评估显示袭击被挫败](/articles/voa/1012123.md)
 
 10-2 [美国财政部官员：美中谈判帮助避免中国对提高关税进行报复](/articles/voa/1012124.md)
@@ -596,8 +600,4 @@
 9-21 [以色列和黎巴嫩发生激烈的跨境火箭弹对射](/articles/voa/1012419.md)
 
 9-21 [欧盟公布计划，利用被冻结的俄罗斯资产为乌克兰提供390亿美元贷款](/articles/voa/1012420.md)
-
-9-21 [以色列调查士兵从约旦河西岸屋顶抛尸体事件](/articles/voa/1012421.md)
-
-9-21 [公民记者张展的律师和母亲遭警方非法羁押，人权人士担忧她或成为下一个高智晟](/articles/voa/1012422.md)
 
