--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-2 [拜登星期三视察遭受飓风袭击最严重的北卡罗来纳州](/articles/voa/1012119.md)
+
 10-2 [台风“山陀儿”逼近，台湾停工停课并休市](/articles/voa/1012120.md)
 
 10-2 [中共建政75周年 示威者抗议中共在伦敦兴建新大使馆的计划](/articles/voa/1012121.md)
@@ -598,6 +600,4 @@
 9-21 [美军将领：美国和乍得计划让美军重返](/articles/voa/1012417.md)
 
 9-21 [美两党议员示警中国利用法律战打压国外学者](/articles/voa/1012418.md)
-
-9-21 [以色列和黎巴嫩发生激烈的跨境火箭弹对射](/articles/voa/1012419.md)
 
