--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-2 [伊朗：对以色列的导弹袭击已结束 奥斯汀: 美准备好对抗伊朗](/articles/voa/1012118.md)
+
 10-2 [拜登星期三视察遭受飓风袭击最严重的北卡罗来纳州](/articles/voa/1012119.md)
 
 10-2 [台风“山陀儿”逼近，台湾停工停课并休市](/articles/voa/1012120.md)
@@ -598,6 +600,4 @@
 9-21 [为抗衡中国，美联邦政府向14个州提供30亿美元的电动车电池生产奖励](/articles/voa/1012416.md)
 
 9-21 [美军将领：美国和乍得计划让美军重返](/articles/voa/1012417.md)
-
-9-21 [美两党议员示警中国利用法律战打压国外学者](/articles/voa/1012418.md)
 
