--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-2 [【旧文重温】人文经济学会｜陈志武：政策牛市害了谁](/articles/cdt/336654.md)
+
 10-2 [曾武律师｜关于曾武律师因关闭休息区信号屏蔽器拟被行政处罚5日的声明](/articles/cdt/336660.md)
 
 10-2 [家传研究员｜昨夜入沪杀三人，当大城市成为泄愤目标……](/articles/cdt/336661.md)
@@ -598,6 +600,4 @@
 8-28 [那些原本是废话的常识｜给一岁孩子“立规矩”，印证丛林社会遍地怂人](/articles/cdt/337597.md)
 
 8-28 [旧闻评论｜公众对政策的误解从来不是问题](/articles/cdt/337599.md)
-
-8-28 [【404视频】章北海official｜互联网不信任网证网号，历史记住河南红码](/articles/cdt/337602.md)
 
