--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-2 [真主党与以色列地面部队交火](/articles/dw/1024126.md)
+
+10-2 [苏黎世托儿所附近持刀袭击，三名儿童受伤](/articles/dw/1024127.md)
+
 10-2 [中国刺激经济大招能奏效？ 专家：关键看人民买不买账](/articles/dw/1024128.md)
 
 10-2 [以色列“不欢迎”联合国秘书长 发布入境禁令](/articles/dw/1024129.md)
@@ -596,8 +600,4 @@
 8-31 [中国海军测量船进入日本领海 日方提出抗议](/articles/dw/1024424.md)
 
 8-31 [台湾民众党主席柯文哲不服逮捕 法院驳回提审](/articles/dw/1024425.md)
-
-8-31 [巴西大法官下令暂停X平台营运](/articles/dw/1024426.md)
-
-8-31 [限制对华出口？荷兰首相:经济利益极其重要](/articles/dw/1024427.md)
 
