--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-3 [欧盟最后投票临近，这四个国家将决定中国电动汽车的命运](/articles/voa/1012107.md)
+
 10-3 [尹锡悦与石破茂首次通话，承诺与美合作应对朝鲜威胁](/articles/voa/1012108.md)
 
 10-2 [菲律宾寻求军事现代化 庞大的武器需求吸引全球承包商](/articles/voa/1012109.md)
@@ -598,6 +600,4 @@
 9-21 [四方安全对话峰会周六登场 将就南中国海与朝鲜发表措辞强硬的联合声明](/articles/voa/1012405.md)
 
 9-21 [美国即将向台湾提供更大规模的安全援助](/articles/voa/1012406.md)
-
-9-21 [非法入境朝鲜的美国士兵被判处一年监禁后 现已被释放](/articles/voa/1012407.md)
 
