--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-3 [美国将两家被指参与新疆强迫劳动的中国公司加入实体清单，首次涉钢铁和甜味剂行业](/articles/voa/1012105.md)
+
+10-3 [联合国：俄罗斯当局系统地对乌克兰战俘施以酷刑](/articles/voa/1012106.md)
+
 10-3 [欧盟最后投票临近，这四个国家将决定中国电动汽车的命运](/articles/voa/1012107.md)
 
 10-3 [尹锡悦与石破茂首次通话，承诺与美合作应对朝鲜威胁](/articles/voa/1012108.md)
@@ -596,8 +600,4 @@
 9-21 [日本中部降下“前所未有”的暴雨 震灾后的能登地区多处遭大水淹没](/articles/voa/1012403.md)
 
 9-21 [被印度尼西亚叛军囚禁19个月后，新西兰籍机师获释](/articles/voa/1012404.md)
-
-9-21 [四方安全对话峰会周六登场 将就南中国海与朝鲜发表措辞强硬的联合声明](/articles/voa/1012405.md)
-
-9-21 [美国即将向台湾提供更大规模的安全援助](/articles/voa/1012406.md)
 
