--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-3 [VOA专访美军非洲司令谈非洲反恐行动与障碍以及中国在非洲再建军事基地的可能性](/articles/voa/1012101.md)
+
+10-3 [美中计划安排拜登和习近平未来几天通话](/articles/voa/1012102.md)
+
+10-3 [伊朗袭击以色列后，中国官媒借撤侨宣传中国强大 网民反以言论占上风](/articles/voa/1012103.md)
+
 10-3 [在黎巴嫩的埃塞俄比亚人呼吁本国政府撤侨](/articles/voa/1012104.md)
 
 10-3 [美国将两家被指参与新疆强迫劳动的中国公司加入实体清单，首次涉钢铁和甜味剂行业](/articles/voa/1012105.md)
@@ -594,10 +600,4 @@
 9-21 [九国联名呼吁联合国秘书长接纳台湾，台外交部表示感谢](/articles/voa/1012399.md)
 
 9-21 [无视西方指责，伊朗举行阅兵展示新型无人机和导弹](/articles/voa/1012400.md)
-
-9-21 [余茂春对话戴博：美中关系两种思路的碰撞](/articles/voa/1012401.md)
-
-9-21 [中国网络观察: 官员非正常死亡现象意蕴何在](/articles/voa/1012402.md)
-
-9-21 [日本中部降下“前所未有”的暴雨 震灾后的能登地区多处遭大水淹没](/articles/voa/1012403.md)
 
