--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -63,6 +63,8 @@
 
 9-30 [【CDT关注】WOMEN我们｜当父母成为国家的敌人，未成年的孩子们成为了“最脆弱的迫害对象”](/articles/cdt/336731.md)
 
+10-3 [【404文库】“我唯一的愿望就是，这样的悲剧不再重演”（外二篇）](/articles/cdt/336732.md)
+
 9-30 [【CDT关注】“中国长期以来盛行的极端民族主义及仇日教育，放纵了矇昧与罪恶”（外二篇）](/articles/cdt/336734.md)
 
 9-30 [【CDT周报】第188期：古有拍照勾魂，今有苹果爆炸](/articles/cdt/336735.md)
@@ -598,6 +600,4 @@
 8-29 [每日一语 2024.8.27](/articles/cdt/337581.md)
 
 8-29 [浣花溪杜甫｜“砸锅卖铁”是最愚蠢的方式，直接卖锅不好吗？](/articles/cdt/337586.md)
-
-8-29 [【404文库】建设性意见｜当一座城市决定“砸锅卖铁”](/articles/cdt/337590.md)
 
