--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-3 [美国务卿就中华人民共和国国庆日发表祝贺声明](/articles/voa/1012095.md)
+
 10-3 [拜登批准部署千名军人赶赴受飓风“海伦”重创的州支援救灾](/articles/voa/1012096.md)
 
 10-3 [美国政府指控五名当时在密歇根大学就读的中国公民试图掩盖夜访美军基地的行踪](/articles/voa/1012097.md)
@@ -598,6 +600,4 @@
 9-22 [黎巴嫩卫生部：以色列空袭贝鲁特的死亡人数上升到37人](/articles/voa/1012393.md)
 
 9-22 [拜登总统和日本首相岸田文雄讨论对南中国海问题的共同担忧](/articles/voa/1012394.md)
-
-9-22 [据媒体报道，俄罗斯和中国开始在日本海举行海军演习](/articles/voa/1012395.md)
 
