--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-3 [两名中国旅客闹场港人活动 遭台湾政府驱逐出境](/articles/voa/1012090.md)
+
 10-3 [美国国土安全部示警 10月7日和11月选举存在安全风险](/articles/voa/1012091.md)
 
 10-3 [50年来最高层级 新加坡前交通部长涉贪被判刑12个月](/articles/voa/1012092.md)
@@ -598,6 +600,4 @@
 9-22 [马克思主义倾向的候选人在斯里兰卡总统选举中遥遥领先](/articles/voa/1012388.md)
 
 9-22 [以色列突袭并下令关闭位于约旦河西岸的半岛电视台办公室45天](/articles/voa/1012389.md)
-
-9-22 [拜登对四方安全对话领导人表示：中国正在“测试”我们](/articles/voa/1012390.md)
 
