--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-3 [世界媒体看中国：股市猛涨与其他](/articles/voa/1012088.md)
+
+10-3 [智库报告：中国需要“雄心勃勃”的气候目标来兑现承诺](/articles/voa/1012089.md)
+
 10-3 [两名中国旅客闹场港人活动 遭台湾政府驱逐出境](/articles/voa/1012090.md)
 
 10-3 [美国国土安全部示警 10月7日和11月选举存在安全风险](/articles/voa/1012091.md)
@@ -596,8 +600,4 @@
 9-22 [伊朗一处煤矿因甲烷泄漏引发爆炸 已有51人死亡](/articles/voa/1012386.md)
 
 9-22 [日本男孩遇刺身亡 中国社交媒体封禁反日账号](/articles/voa/1012387.md)
-
-9-22 [马克思主义倾向的候选人在斯里兰卡总统选举中遥遥领先](/articles/voa/1012388.md)
-
-9-22 [以色列突袭并下令关闭位于约旦河西岸的半岛电视台办公室45天](/articles/voa/1012389.md)
 
