--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-3 [以黎战火升级 中东局势引人忧](/articles/dw/1024123.md)
+
+10-3 [德国禁止向以色列出售武器？](/articles/dw/1024124.md)
+
 10-3 [中國表態支持古特雷斯 批以色列無端指責](/articles/dw/1024125.md)
 
 10-2 [真主党与以色列地面部队交火](/articles/dw/1024126.md)
@@ -596,8 +600,4 @@
 8-31 [又双叒叕出撞船事件 中菲再次互相指责](/articles/dw/1024421.md)
 
 8-31 [F-16战机坠毁后 乌克兰空军司令被撤职](/articles/dw/1024422.md)
-
-8-31 [中国施压太平洋岛国论坛　台湾谴责「蛮横介入」](/articles/dw/1024423.md)
-
-8-31 [中国海军测量船进入日本领海 日方提出抗议](/articles/dw/1024424.md)
 
