--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-3 [陶舜财经｜“你们穿和服上街不怕被打吗？”](/articles/cdt/336630.md)
+
+10-3 [知灼｜出席国庆招待会的老同志](/articles/cdt/336631.md)
+
 10-3 [每日一语 2024.10.2](/articles/cdt/336633.md)
 
 10-3 [基本常识｜中国男子持刀袭击瑞士托儿所捅伤3个孩子，震撼全球媒体](/articles/cdt/336638.md)
@@ -596,8 +600,4 @@
 8-29 [经济观察报｜地方政府要到砸锅卖铁的地步？](/articles/cdt/337575.md)
 
 8-29 [【404文库】古老板的老巢｜砸锅卖铁，干得好！应该全国推广](/articles/cdt/337577.md)
-
-8-29 [每日一语 2024.8.28](/articles/cdt/337579.md)
-
-8-29 [每日一语 2024.8.27](/articles/cdt/337581.md)
 
