--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-3 [中国股市暴涨 正吸引热钱从亚洲其它市场回流中国](/articles/voa/1012086.md)
+
 10-3 [香港8月份零售总额及销量连续双跌，短期内改善不乐观](/articles/voa/1012087.md)
 
 10-3 [世界媒体看中国：股市猛涨与其他](/articles/voa/1012088.md)
@@ -598,6 +600,4 @@
 9-22 [美中合作办大学风险何在？](/articles/voa/1012384.md)
 
 9-22 [大选临近，两党竞争激烈，美国普通人选择公开场合不谈政治](/articles/voa/1012385.md)
-
-9-22 [伊朗一处煤矿因甲烷泄漏引发爆炸 已有51人死亡](/articles/voa/1012386.md)
 
