--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-3 [欧盟表决电动汽车关税在即 大概率通过](/articles/dw/1024121.md)
+
+10-3 [德语媒体：经济下行让中国领导层进入最高警戒](/articles/dw/1024122.md)
+
 10-3 [以黎战火升级 中东局势引人忧](/articles/dw/1024123.md)
 
 10-3 [德国禁止向以色列出售武器？](/articles/dw/1024124.md)
@@ -596,8 +600,4 @@
 9-1 [2024年残奥会开幕式不容错过的精彩瞬间](/articles/dw/1024419.md)
 
 9-1 [跨性别运动员出征巴黎残奥会](/articles/dw/1024420.md)
-
-8-31 [又双叒叕出撞船事件 中菲再次互相指责](/articles/dw/1024421.md)
-
-8-31 [F-16战机坠毁后 乌克兰空军司令被撤职](/articles/dw/1024422.md)
 
