--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-4 [铁棒殴打，迫其下跪：越南谴责中国袭击其渔民的“残暴行为“](/articles/dw/1024120.md)
+
 10-3 [欧盟表决电动汽车关税在即 大概率通过](/articles/dw/1024121.md)
 
 10-3 [德语媒体：经济下行让中国领导层进入最高警戒](/articles/dw/1024122.md)
@@ -598,6 +600,4 @@
 9-1 [客座评论：毛邓兼用的习近平为何陷入困境](/articles/dw/1024418.md)
 
 9-1 [2024年残奥会开幕式不容错过的精彩瞬间](/articles/dw/1024419.md)
-
-9-1 [跨性别运动员出征巴黎残奥会](/articles/dw/1024420.md)
 
