--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-4 [任心意｜任志强病重，女儿向习近平发公开信恳求允许出国治疗](/articles/cdt/336621.md)
+
 10-3 [陶舜财经｜“你们穿和服上街不怕被打吗？”](/articles/cdt/336630.md)
 
 10-3 [知灼｜出席国庆招待会的老同志](/articles/cdt/336631.md)
@@ -598,6 +600,4 @@
 9-7 [【CDT关注】“那个瞬间我真的觉得我是在作恶”，中国互联网审核员的罪与罚（外二篇）](/articles/cdt/337571.md)
 
 8-29 [经济观察报｜地方政府要到砸锅卖铁的地步？](/articles/cdt/337575.md)
-
-8-29 [【404文库】古老板的老巢｜砸锅卖铁，干得好！应该全国推广](/articles/cdt/337577.md)
 
