--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+10-4 [习近平崇尚祭祀英烈 分析：把中国引入到“准战”状态](/articles/voa/1012080.md)
+
+10-4 [中东区域战争已经到来？是否继续升级，以色列将如何回击伊朗成为关键](/articles/voa/1012081.md)
+
+10-4 [菲律宾：密切关注并严肃对待媒体有关中国间谍渗透的报道](/articles/voa/1012082.md)
+
+10-4 [香港民研调查指 市民质疑盛事经济浪费及劳民伤财](/articles/voa/1012083.md)
+
+10-4 [以军袭击贝鲁特市中心，伊朗总统警告:如遭以色列报复就发起反击](/articles/voa/1012084.md)
+
 10-3 [“奇怪的”强台风在台湾西南部登陆，猛袭重镇高雄 至少两人死亡](/articles/voa/1012085.md)
 
 10-3 [中国股市暴涨 正吸引热钱从亚洲其它市场回流中国](/articles/voa/1012086.md)
@@ -590,14 +600,4 @@
 9-23 [愤怒的法国干邑生产商对中国关税威胁表示担忧](/articles/voa/1012378.md)
 
 9-23 [四方安全对话领导人在峰会上打造“自由与安全的”印太](/articles/voa/1012379.md)
-
-9-23 [俄军制导炸弹击中哈尔科夫市一高层公寓楼，导致21人受伤](/articles/voa/1012380.md)
-
-9-22 [边境冲突后，印度工业能否在中国投资回流中实现“自力更生”？](/articles/voa/1012381.md)
-
-9-22 [UN举行“未来峰会”应对全球危机，“未来契约”前途受关注](/articles/voa/1012382.md)
-
-9-22 [以色列与真主党隔空激烈交火，联合国警告中东濒临“迫在眉睫的灾难”](/articles/voa/1012383.md)
-
-9-22 [美中合作办大学风险何在？](/articles/voa/1012384.md)
 
