--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-4 [乌军使用美制导弹摧毁俄军一重要雷达站，让俄军防空系统瞬间变失明](/articles/voa/1012079.md)
+
 10-4 [习近平崇尚祭祀英烈 分析：把中国引入到“准战”状态](/articles/voa/1012080.md)
 
 10-4 [中东区域战争已经到来？是否继续升级，以色列将如何回击伊朗成为关键](/articles/voa/1012081.md)
@@ -598,6 +600,4 @@
 9-23 [预算协议避免可能的联邦政府关门，并为政府提供资金到12月](/articles/voa/1012377.md)
 
 9-23 [愤怒的法国干邑生产商对中国关税威胁表示担忧](/articles/voa/1012378.md)
-
-9-23 [四方安全对话领导人在峰会上打造“自由与安全的”印太](/articles/voa/1012379.md)
 
