--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-4 [在美国用六千部冒牌手机欺诈苹果公司的两名中国公民被判处监禁](/articles/voa/1012077.md)
+
 10-4 [中共加强对知识分子的打压力度：多位学者因批评言论遭整肃](/articles/voa/1012078.md)
 
 10-4 [乌军使用美制导弹摧毁俄军一重要雷达站，让俄军防空系统瞬间变失明](/articles/voa/1012079.md)
@@ -598,6 +600,4 @@
 9-23 [乌克兰总统访问宾州弹药厂 感谢工人并请求美国的更多援助](/articles/voa/1012375.md)
 
 9-23 [中国国安部称遭到台湾军方黑客组织的频繁攻击 台湾否认](/articles/voa/1012376.md)
-
-9-23 [预算协议避免可能的联邦政府关门，并为政府提供资金到12月](/articles/voa/1012377.md)
 
