--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-4 [刚果东部一艘有278名乘客的超载船只倾覆，至少78人丧生](/articles/voa/1012064.md)
+
 10-4 [台风“山陀儿”来袭后，台湾开始清理工作并逐步重新开放](/articles/voa/1012065.md)
 
 10-4 [拜登在佐治亚和佛罗里达州视察了飓风“海伦”带来的严重灾情](/articles/voa/1012066.md)
@@ -598,6 +600,4 @@
 9-24 [伊朗外长称准备好在纽约联大期间恢复核谈判：“如果其他各方也愿意的话”](/articles/voa/1012362.md)
 
 9-24 [俄国军机侵犯日本领空，日本战机首次发射照明弹警告](/articles/voa/1012363.md)
-
-9-24 [34项台农产品输中不再免税 台湾果农：另辟市场](/articles/voa/1012364.md)
 
