--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-4 [哈里斯与丽兹·切尼在共和党诞生地同台造势 特朗普则在密歇根州举行集会](/articles/voa/1012063.md)
+
 10-4 [刚果东部一艘有278名乘客的超载船只倾覆，至少78人丧生](/articles/voa/1012064.md)
 
 10-4 [台风“山陀儿”来袭后，台湾开始清理工作并逐步重新开放](/articles/voa/1012065.md)
@@ -598,6 +600,4 @@
 9-24 [自民党总裁选举进入关键阶段：在日华人和台湾人如何看？](/articles/voa/1012361.md)
 
 9-24 [伊朗外长称准备好在纽约联大期间恢复核谈判：“如果其他各方也愿意的话”](/articles/voa/1012362.md)
-
-9-24 [俄国军机侵犯日本领空，日本战机首次发射照明弹警告](/articles/voa/1012363.md)
 
