--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-4 [金正恩威胁韩国：如遭攻击将动用核武器](/articles/dw/1024118.md)
+
 10-4 [組合拳刺激房市有成？萬科、碧桂園離岸債券見漲](/articles/dw/1024119.md)
 
 10-4 [铁棒殴打，迫其下跪：越南谴责中国袭击其渔民的“残暴行为“](/articles/dw/1024120.md)
@@ -598,6 +600,4 @@
 9-1 [俄罗斯领空禁令帮助中国航空公司赢得竞争](/articles/dw/1024416.md)
 
 9-1 [新核时代：中美可能签订军控协议吗？](/articles/dw/1024417.md)
-
-9-1 [客座评论：毛邓兼用的习近平为何陷入困境](/articles/dw/1024418.md)
 
