--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-4 [美国纽约州政要出席台湾双十酒会](/articles/voa/1012060.md)
+
 10-4 [俄乌双方利用无人机互攻 俄罗斯核电站发生汽车炸弹袭击1人丧生](/articles/voa/1012061.md)
 
 10-4 [任志强女儿致信习近平，恳求让病重的父亲出国治疗](/articles/voa/1012062.md)
@@ -598,6 +600,4 @@
 9-24 [以色列在黎巴嫩对真主党发动广泛袭击](/articles/voa/1012358.md)
 
 9-24 [拜登政府宣布计划在美国禁止配备中国和俄罗斯软硬件的联网与自动驾驶汽车](/articles/voa/1012359.md)
-
-9-24 [联调局数据显示暴力犯罪连续第二年下降](/articles/voa/1012360.md)
 
