--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-4 [任志强女儿发公开信 恳请习近平允其父保外就医](/articles/dw/1024113.md)
+
+10-4 [德国无力回天 对华电动汽车关税成定局](/articles/dw/1024114.md)
+
 10-4 [纳斯鲁拉已被秘密下葬 哈梅内伊赞真主党和哈马斯](/articles/dw/1024115.md)
 
 10-4 [调查：近六成德国人会考虑购买中国产汽车](/articles/dw/1024116.md)
@@ -596,8 +600,4 @@
 9-1 [客座評論：那一年起，香港人有真正快樂過嗎？](/articles/dw/1024411.md)
 
 9-1 [以军在加沙找到六名人质遗体](/articles/dw/1024412.md)
-
-9-1 [小儿麻痹疫苗接种在加沙开始](/articles/dw/1024413.md)
-
-9-1 [澳洲勞權法上路 下班離線權促進生活工作平衡](/articles/dw/1024414.md)
 
