--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-4 [新官上任：北约秘书长吕特面临重重挑战](/articles/dw/1024112.md)
+
 10-4 [任志强女儿发公开信 恳请习近平允其父保外就医](/articles/dw/1024113.md)
 
 10-4 [德国无力回天 对华电动汽车关税成定局](/articles/dw/1024114.md)
@@ -598,6 +600,4 @@
 9-1 [希腊9月1日起大幅提高“黄金签证”门槛](/articles/dw/1024410.md)
 
 9-1 [客座評論：那一年起，香港人有真正快樂過嗎？](/articles/dw/1024411.md)
-
-9-1 [以军在加沙找到六名人质遗体](/articles/dw/1024412.md)
 
