--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-5 [分析：日本可能寻求和美国建立核磋商机制，应对核战紧急状态](/articles/voa/1012054.md)
+
 10-4 [中国股市疯涨给对冲基金带来短期暴利 但专家提醒为涨势消退做好准备](/articles/voa/1012055.md)
 
 10-4 [台湾“首来族”免费游上千中国景点，中国网民反弹声四起](/articles/voa/1012056.md)
@@ -598,6 +600,4 @@
 9-24 [划重点！一次读懂第79届联大的中国角色和重要议题](/articles/voa/1012352.md)
 
 9-24 [四方机制进一步制度化，在中国问题上美日印澳“越来越结盟”](/articles/voa/1012353.md)
-
-9-24 [加利福尼亚州起诉埃克森美孚造成全球塑料污染](/articles/voa/1012354.md)
 
