--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,18 @@
 美国之音
 ------
 
+10-5 [对中国产品发起反倾销调查：印度在保护本土产业与促进贸易之间找平衡](/articles/voa/1012040.md)
+
+10-5 [美智库报告：中国可能对台湾发动经济战以迫使其投降](/articles/voa/1012041.md)
+
+10-5 [拜登：以色列尚未决定如何回应伊朗导弹袭击](/articles/voa/1012042.md)
+
+10-5 [北约新领袖承诺继续支持乌克兰，但前方挑战重重](/articles/voa/1012043.md)
+
+10-5 [泽连斯基访问与俄罗斯库尔斯州接壤的乌克兰苏梅州](/articles/voa/1012044.md)
+
+10-5 [叙利亚为何对以色列进攻真主党袖手旁观？](/articles/voa/1012045.md)
+
 10-5 [美军“佐治亚号”潜艇攻击也门胡塞武装目标](/articles/voa/1012046.md)
 
 10-5 [知情人：不放任志强，习近平的残暴将载入史册](/articles/voa/1012047.md)
@@ -588,16 +600,4 @@
 9-24 [中国坚定支持黎巴嫩维护主权和安全 外长王毅谴责以色列大规模空袭](/articles/voa/1012338.md)
 
 9-24 [泽连斯基称：美国若果断行动，可能于明年结束与俄罗斯的战争](/articles/voa/1012339.md)
-
-9-24 [拜登即将发表任内最后一次联大演讲, 关注加沙和乌克兰并提及美国与中国的竞争](/articles/voa/1012340.md)
-
-9-24 [中国推出新的一揽子刺激计划 促进扩大消费和投资](/articles/voa/1012341.md)
-
-9-24 [新加坡罕见高官涉贪 前交通部长易华仁就收受礼物认罪](/articles/voa/1012342.md)
-
-9-24 [日籍男孩深圳遇刺身亡 王毅吁日本外相“冷静理性”处理](/articles/voa/1012343.md)
-
-9-24 [加拿大省政府支持的矿业工厂誓言在稀土领域与中国竞争](/articles/voa/1012344.md)
-
-9-24 [斯里兰卡新总统就任，他将如何平衡与中印的关系？](/articles/voa/1012345.md)
 
