--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-5 [海外香港人杂志《如水》于香港被封锁 为媒体类网站首例](/articles/voa/1012037.md)
+
 10-5 [中国敦促欧盟推迟对中国电动车加征高额关税](/articles/voa/1012038.md)
 
 10-5 [美国将为黎巴嫩提供新一轮1.57亿美元的人道主义援助](/articles/voa/1012039.md)
@@ -598,6 +600,4 @@
 9-24 [新加坡两艘新型潜艇服役，保卫海上航线畅通与安全](/articles/voa/1012335.md)
 
 9-24 [国际对高端技术产品需求旺盛，台湾8月出口超500亿美元，连续6个月正成长](/articles/voa/1012336.md)
-
-9-24 [国事光析：从“西方病”到“中国灾”：还说“中国式现代化”](/articles/voa/1012337.md)
 
