--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-5 [海地黑帮袭击城镇杀害至少70人](/articles/dw/1024110.md)
+
 10-5 [欧盟将表决中国电动车关税 推翻难度大](/articles/dw/1024111.md)
 
 10-4 [新官上任：北约秘书长吕特面临重重挑战](/articles/dw/1024112.md)
@@ -598,6 +600,4 @@
 9-1 [人权观察联手艾未未推出新作义卖](/articles/dw/1024408.md)
 
 9-1 [波兰纪念二战爆发 总统再提战争赔偿](/articles/dw/1024409.md)
-
-9-1 [希腊9月1日起大幅提高“黄金签证”门槛](/articles/dw/1024410.md)
 
