--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-5 [海地发生黑帮屠杀平民 至少70死 数千人逃离家园](/articles/voa/1012034.md)
+
+10-5 [担忧特朗普煽动言论 拜登表对美国大选能否和平进行失去信心](/articles/voa/1012035.md)
+
 10-5 [拜登:不知道以色列是否为了影响美国大选 推迟和平协议](/articles/voa/1012036.md)
 
 10-5 [海外香港人杂志《如水》于香港被封锁 为媒体类网站首例](/articles/voa/1012037.md)
@@ -596,8 +600,4 @@
 9-25 [以色列与真主党冲突进一步升级，各界担心中东战争全面扩大化](/articles/voa/1012332.md)
 
 9-24 [乌克兰：俄军武器使用的外国技术和零部件大部分来自中国](/articles/voa/1012333.md)
-
-9-24 [中国“重磅”放水万亿救房市 分析：太迟太少，经济低迷恐难缓](/articles/voa/1012334.md)
-
-9-24 [新加坡两艘新型潜艇服役，保卫海上航线畅通与安全](/articles/voa/1012335.md)
 
