--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-5 [以黎战火持续   拜登警告不要攻击伊朗石油设施](/articles/dw/1024104.md)
+
 10-5 [包机模式 海空双道 各国如何从黎巴嫩撤侨？](/articles/dw/1024105.md)
 
 10-5 [两岸关注“中国撤侨载回1名台湾人”](/articles/dw/1024106.md)
@@ -598,6 +600,4 @@
 9-2 [教宗出訪亞洲 中梵關係何去何從？](/articles/dw/1024402.md)
 
 9-2 [解码中國：梵蒂岡艱難的外交處境](/articles/dw/1024403.md)
-
-9-2 [解碼中國：梵蒂岡艱難的外交處境](/articles/dw/1024404.md)
 
