--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-6 [彭博：欧盟坚持对中国电动车加征关税不是为了对抗，而是为了公平竞争](/articles/voa/1012027.md)
+
 10-5 [基辅指控俄军在俄乌战争中处决了93名乌军战俘](/articles/voa/1012028.md)
 
 10-5 [以哈战争周年临近，中东战事结束无期，冲突继续扩大令人不安](/articles/voa/1012029.md)
@@ -598,6 +600,4 @@
 9-25 [斯里兰卡新总统要求举行议会选举来巩固权力](/articles/voa/1012325.md)
 
 9-25 [拜登总统联大告别演说呼吁反对侵略、维护民主：“人民比掌权更重要”](/articles/voa/1012326.md)
-
-9-25 [苏林访美寻求合作但重申中国为越南首要优先—“竹子外交”面临平衡考验](/articles/voa/1012327.md)
 
