--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-6 [特朗普重返险遭暗杀之地宾州巴特勒造势 哈里斯会晤阿拉伯裔领袖](/articles/voa/1012018.md)
+
+10-6 [赖清德“祖国说”引热议 微博疑封杀相关视频](/articles/voa/1012019.md)
+
 10-6 [海外港人杂志《如水》于香港无法浏览前 港警曾指有违国安法 要求网站托管商下架](/articles/voa/1012020.md)
 
 10-6 [以色列哈马斯战争周年前 全球成千上万抗议人士走上街头](/articles/voa/1012021.md)
@@ -596,8 +600,4 @@
 9-25 [报告：香港学者担心教授民主被视为煽动，忧虑被举报，不断自我审查](/articles/voa/1012316.md)
 
 9-25 [赖清德：主权不容侵略并吞，台湾绝不可能签和平协议](/articles/voa/1012317.md)
-
-9-25 [中国表示将因抵制新疆产品而调查时装公司PVH](/articles/voa/1012318.md)
-
-9-25 [世界各国领导人在联大讲话，中东与乌克兰冲突成为焦点](/articles/voa/1012319.md)
 
