--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,13 +3,15 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-6 [【重温】玖奌杂货店｜47年前的今天，粉碎“四人帮”，十年“文革”结束](/articles/cdt/336575.md)
+
 10-6 [情况有点复杂｜大家好，我是王春生，我实名“奉纸坐牢”](/articles/cdt/336577.md)
 
 10-6 [Lola｜我的边陲如今在何方](/articles/cdt/336578.md)
 
 10-6 [歪脑｜当经济快速下滑 政治致郁的大时代才拉开帷幕](/articles/cdt/336581.md)
 
-10-6 [【旧文重温】【404文库】南都观察｜孙立平：当前最急迫的三个问题](/articles/cdt/336584.md)
+10-6 [【重温】【404文库】南都观察｜孙立平：当前最急迫的三个问题](/articles/cdt/336584.md)
 
 10-5 [特正经的张某某｜哪怕面对遗书，很多父母都不知道孩子承受过什么](/articles/cdt/336589.md)
 
@@ -598,6 +600,4 @@
 8-31 [亮见｜如此神经，竟然是真的](/articles/cdt/337516.md)
 
 8-31 [阿罗汉不约｜砸锅卖铁，关键看砸谁的锅](/articles/cdt/337518.md)
-
-8-31 [中工网｜十年间减少1500万，离开建筑工地的农民工去哪了？](/articles/cdt/337524.md)
 
