--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-6 [台海安全对澳大利亚的国家利益“高度相关，却不易介入”](/articles/voa/1012015.md)
+
 10-6 [美国议员团在国庆前夕访台 将讨论安全与经济议题](/articles/voa/1012016.md)
 
 10-6 [美国国会及行政当局中国委员会主席敦促拜登寻求释放在中国被不当拘留的美国人](/articles/voa/1012017.md)
@@ -598,6 +600,4 @@
 9-25 [中国要求缅甸族裔团体切断与被认为亲美的缅甸反对团体的关系](/articles/voa/1012313.md)
 
 9-25 [卡塔尔成为第一个加入美国免签证计划的海湾国家](/articles/voa/1012314.md)
-
-9-25 [美国情报官员：中国、伊朗和俄罗斯利用人工智能影响选民的能力“没有想象的那么可信”](/articles/voa/1012315.md)
 
