--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-6 [俄军对基辅、敖德萨等地发动大规模无人机袭击，导致一死一伤和财产损失](/articles/voa/1012013.md)
+
 10-6 [WSJ:中国黑客侵入美国政府监听系统并恐构成国安风险](/articles/voa/1012014.md)
 
 10-6 [台海安全对澳大利亚的国家利益“高度相关，却不易介入”](/articles/voa/1012015.md)
@@ -598,6 +600,4 @@
 9-25 [印度与中国谨慎探索和解之路：边界谈判和经济合作现曙光](/articles/voa/1012311.md)
 
 9-25 [中国大举造舰之际，美国寻求与日本合作维修舰船以维持海上力量](/articles/voa/1012312.md)
-
-9-25 [中国要求缅甸族裔团体切断与被认为亲美的缅甸反对团体的关系](/articles/voa/1012313.md)
 
