--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-7 [以哈战争周年前夕，以色列对贝鲁特发动迄今为止最猛烈空袭](/articles/voa/1012011.md)
+
+10-7 [直击大选假信息：犹太人控制美国政府?](/articles/voa/1012012.md)
+
 10-6 [俄军对基辅、敖德萨等地发动大规模无人机袭击，导致一死一伤和财产损失](/articles/voa/1012013.md)
 
 10-6 [WSJ:中国黑客侵入美国政府监听系统并恐构成国安风险](/articles/voa/1012014.md)
@@ -596,8 +600,4 @@
 9-25 [美国情报部门警告：伊朗威胁暗杀特朗普](/articles/voa/1012309.md)
 
 9-25 [黎巴嫩称 只有美国才能停止以色列和真主党之间的战斗](/articles/voa/1012310.md)
-
-9-25 [印度与中国谨慎探索和解之路：边界谈判和经济合作现曙光](/articles/voa/1012311.md)
-
-9-25 [中国大举造舰之际，美国寻求与日本合作维修舰船以维持海上力量](/articles/voa/1012312.md)
 
