--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-7 [热带风暴米尔顿可能升成飓风，本星期中旬袭击佛罗里达](/articles/voa/1012009.md)
+
 10-7 [哈马斯袭击以色列一周年：以哈战争如何改变中东和全球权力格局](/articles/voa/1012010.md)
 
 10-7 [以哈战争周年前夕，以色列对贝鲁特发动迄今为止最猛烈空袭](/articles/voa/1012011.md)
@@ -598,6 +600,4 @@
 9-25 [中国央行下调中期贷款利率，多数亚股续涨](/articles/voa/1012307.md)
 
 9-25 [中国军方罕见举动 首次公开洲际弹道导弹试射“落入太平洋”](/articles/voa/1012308.md)
-
-9-25 [美国情报部门警告：伊朗威胁暗杀特朗普](/articles/voa/1012309.md)
 
