--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-7 [美联社采访戴琪：贸易谈判促进工人权益的保护 但选民将决定未来的贸易政策走向](/articles/voa/1012008.md)
+
 10-7 [热带风暴米尔顿可能升成飓风，本星期中旬袭击佛罗里达](/articles/voa/1012009.md)
 
 10-7 [哈马斯袭击以色列一周年：以哈战争如何改变中东和全球权力格局](/articles/voa/1012010.md)
@@ -598,6 +600,4 @@
 9-25 [警方追求绩效与社群监控 脱北者在中国寸步难行](/articles/voa/1012306.md)
 
 9-25 [中国央行下调中期贷款利率，多数亚股续涨](/articles/voa/1012307.md)
-
-9-25 [中国军方罕见举动 首次公开洲际弹道导弹试射“落入太平洋”](/articles/voa/1012308.md)
 
