--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-7 [加沙战争一周年：看中国如何从中东的“对冲”玩家变成“楔入”者](/articles/voa/1012001.md)
+
 10-7 [美印半导体协议或开辟与中国“芯片战”新战场](/articles/voa/1012002.md)
 
 10-7 [巴基斯坦南部致命自杀式炸弹击中中国车队致2死10伤](/articles/voa/1012003.md)
@@ -598,6 +600,4 @@
 9-26 [美国无人机产业组团访台 分析：美台打造“非红供应链”](/articles/voa/1012299.md)
 
 9-26 [中东三国：制止加沙冲突是阻止整个地区战争升级的关键](/articles/voa/1012300.md)
-
-9-25 [以色列成功拦截真主党袭击摩萨德总部的导弹，古特雷斯：黎巴嫩濒临崩溃](/articles/voa/1012301.md)
 
