--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-7 [賴清德「祖國說」消除台獨疑慮？學者：過度解讀](/articles/dw/1024093.md)
+
 10-6 [德国经济萎缩超预期 未来两年或迎复苏转机](/articles/dw/1024094.md)
 
 10-6 [调查：德国三分之一人口愿意退休后继续工作](/articles/dw/1024095.md)
@@ -598,6 +600,4 @@
 9-3 [香港“47人案“结束陈情阶段](/articles/dw/1024391.md)
 
 9-3 [山东发生校车事故 五名学生丧生](/articles/dw/1024392.md)
-
-9-3 [德国经济界对右翼势力在德东地区的崛起感到担忧](/articles/dw/1024393.md)
 
