--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-7 [知情人士：台湾前总统蔡英文即将出访欧洲三国](/articles/voa/1011999.md)
+
 10-7 [10月7日周年前夕 支持巴勒斯坦和以色列的人在世界各地举行集会](/articles/voa/1012000.md)
 
 10-7 [加沙战争一周年：看中国如何从中东的“对冲”玩家变成“楔入”者](/articles/voa/1012001.md)
@@ -598,6 +600,4 @@
 9-26 [为突破劳动力萎缩困局，北京再出新招让老年人扩大社会参与](/articles/voa/1012297.md)
 
 9-26 [泽连斯基：必须迫使莫斯科接受和平](/articles/voa/1012298.md)
-
-9-26 [美国无人机产业组团访台 分析：美台打造“非红供应链”](/articles/voa/1012299.md)
 
