--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-7 [聿文视界：从任志强到朱恒鹏，中共官员“非议习”禁而不绝](/articles/voa/1011995.md)
+
+10-7 [台湾：总统国庆演讲后 中国可能宣布于周边军演](/articles/voa/1011996.md)
+
+10-7 [菲律宾与韩国承诺加强防务合作 双边关系升级为战略伙伴关系](/articles/voa/1011997.md)
+
 10-7 [伤痕累累、多线作战的以色列人纪念哈马斯袭击一周年](/articles/voa/1011998.md)
 
 10-7 [知情人士：台湾前总统蔡英文即将出访欧洲三国](/articles/voa/1011999.md)
@@ -594,10 +600,4 @@
 9-26 [中国青年就业挑战加剧：传统“金饭碗”不再，直播成大学生新宠](/articles/voa/1012293.md)
 
 9-26 [联合国：俄罗斯在恐惧和镇压的气氛中压制异见](/articles/voa/1012294.md)
-
-9-26 [泽连斯基联大发言：不接受他国将其意愿强加给乌克兰，质疑中国推动和谈的动机](/articles/voa/1012295.md)
-
-9-26 [以军总参谋长告诉官兵为地面攻入黎巴嫩做好准备](/articles/voa/1012296.md)
-
-9-26 [为突破劳动力萎缩困局，北京再出新招让老年人扩大社会参与](/articles/voa/1012297.md)
 
