--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-7 [飓风米尔顿正朝主要人口中心前进 佛罗里达州为大规模撤离做好准备](/articles/voa/1011994.md)
+
 10-7 [聿文视界：从任志强到朱恒鹏，中共官员“非议习”禁而不绝](/articles/voa/1011995.md)
 
 10-7 [台湾：总统国庆演讲后 中国可能宣布于周边军演](/articles/voa/1011996.md)
@@ -598,6 +600,4 @@
 9-26 [美国国会议员：遏制美国在华投资的立法是重中之重](/articles/voa/1012292.md)
 
 9-26 [中国青年就业挑战加剧：传统“金饭碗”不再，直播成大学生新宠](/articles/voa/1012293.md)
-
-9-26 [联合国：俄罗斯在恐惧和镇压的气氛中压制异见](/articles/voa/1012294.md)
 
