--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-7 [读宋史的赵大胖｜一生都在追求“教育意义”的家长](/articles/cdt/336558.md)
+
 10-7 [【404文库】新新默存｜王五四：忽然爱国的咪蒙](/articles/cdt/336560.md)
 
 10-7 [凤凰网｜疯狂的保研：举报同学，献血加分，规则盲盒](/articles/cdt/336563.md)
@@ -598,6 +600,4 @@
 9-1 [衣者褚｜万万没想到，会被省纪委约见](/articles/cdt/337504.md)
 
 9-1 [星球商业评论｜牢房玉液酒多少钱一杯](/articles/cdt/337506.md)
-
-9-2 [【CDT报告汇】ASPI：蒙古文化变北疆文化，中共新话旨在削弱蒙古族身份认同（外二篇）](/articles/cdt/337508.md)
 
