--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-7 [多次袭击中国人的“俾路支解放军”究竟是什么组织？](/articles/dw/1024091.md)
+
 10-7 [在中印之间回旋求援：马尔代夫总统访印度](/articles/dw/1024092.md)
 
 10-7 [賴清德「祖國說」消除台獨疑慮？學者：過度解讀](/articles/dw/1024093.md)
@@ -598,6 +600,4 @@
 9-3 [艺术家回国期间被逮捕 公开信呼吁放人](/articles/dw/1024389.md)
 
 9-3 [大众前CEO文德恩因“柴油门”丑闻接受审判](/articles/dw/1024390.md)
-
-9-3 [香港“47人案“结束陈情阶段](/articles/dw/1024391.md)
 
