--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+10-7 [公投过关 哈萨克斯坦将建首座核电站](/articles/dw/1024087.md)
+
+10-7 [客座评论：肖尔茨投下对华关税反对票之后](/articles/dw/1024088.md)
+
+10-7 [欧盟对华电动车关税会不会适得其反？](/articles/dw/1024089.md)
+
 10-7 [中国车队在巴基斯坦遇袭 两人丧生多人受伤](/articles/dw/1024090.md)
 
 10-7 [多次袭击中国人的“俾路支解放军”究竟是什么组织？](/articles/dw/1024091.md)
@@ -594,10 +600,4 @@
 9-4 [印度惶恐不安的夜班女医生](/articles/dw/1024385.md)
 
 9-4 [客座評論：柯文哲粉絲轉黑實錄](/articles/dw/1024386.md)
-
-9-4 [金钱在美国总统大选中扮演怎样的角色？](/articles/dw/1024387.md)
-
-9-4 [涉阻台美官員接觸 紐約州前幕僚遭控中國代理人](/articles/dw/1024388.md)
-
-9-3 [艺术家回国期间被逮捕 公开信呼吁放人](/articles/dw/1024389.md)
 
