--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-8 [美军将更多资产调往中东，在印太是否还有足够的实力阻止习近平侵台？](/articles/voa/1011986.md)
+
 10-8 [俄乌互相袭击对方关键军事设施，泽连斯基说战争进入“非常重要” 阶段](/articles/voa/1011987.md)
 
 10-8 [普京生日当天，俄主要电视广播官媒遭大规模黑客网攻 网站服务瘫痪](/articles/voa/1011988.md)
@@ -598,6 +600,4 @@
 9-26 [被控非法充当中共代理人的孙雯在纽约出庭，华人抗议者送盐水鸭称其“可耻”](/articles/voa/1012284.md)
 
 9-26 [维吾尔学者伊力哈木被判无期徒刑十周年之际，要求释放他的国际呼声再起](/articles/voa/1012285.md)
-
-9-26 [美众院中共问题委员会两党领袖呼吁加强应对中国不公平贸易行为](/articles/voa/1012286.md)
 
