--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-8 [美国在加沙战争一周年之际针对哈马斯国际筹款网络实施制裁](/articles/voa/1011980.md)
+
+10-8 [蔡英文卸任总统后首次出访 旨在加强台湾同中东欧国家关系](/articles/voa/1011981.md)
+
+10-8 [精神病院成“集中营”，洛杉矶民主人士曝光中共酷刑迫害 支持美众院通过《阻止中共法》](/articles/voa/1011982.md)
+
 10-8 [致命爆炸发生后,中国要求巴基斯坦确保其公民安全](/articles/voa/1011983.md)
 
 10-8 [文革结束近半世纪 背负杀人罪的老“红卫兵”呼吁更多同伴公开道歉](/articles/voa/1011984.md)
@@ -594,10 +600,4 @@
 9-26 [纽约市长埃里克·亚当斯因腐败调查遭到起诉](/articles/voa/1012278.md)
 
 9-26 [强化防灾与备战 台湾明年拟办“全社会”无剧本演习](/articles/voa/1012279.md)
-
-9-26 [路透：美国为泽连斯基访问准备了80亿美元的军援计划](/articles/voa/1012280.md)
-
-9-26 [拜登会见越南领导人苏林 抗衡中俄影响力](/articles/voa/1012281.md)
-
-9-26 [日本军舰首次穿越台湾海峡 协同澳大利亚、新西兰捍卫航行自由](/articles/voa/1012282.md)
 
