--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-8 [分析: 欧盟支持对中国电动汽车征收关税显示柏林影响力减弱](/articles/voa/1011977.md)
+
+10-8 [中国房市迎来“复苏”？ 分析人士：目前下定论还为时过早](/articles/voa/1011978.md)
+
+10-8 [佛罗里达州准备迎接飓风米尔顿的袭击](/articles/voa/1011979.md)
+
 10-8 [美国在加沙战争一周年之际针对哈马斯国际筹款网络实施制裁](/articles/voa/1011980.md)
 
 10-8 [蔡英文卸任总统后首次出访 旨在加强台湾同中东欧国家关系](/articles/voa/1011981.md)
@@ -594,10 +600,4 @@
 9-26 [美国和北约对俄在中国设有秘密远程攻击无人机项目深感忧虑](/articles/voa/1012275.md)
 
 9-26 [经济挑战严峻，中共政治局誓言加大财政支出，力保今年增长目标](/articles/voa/1012276.md)
-
-9-26 [台北指责北京穷兵黩武，以导弹试射和军演威胁周边邻国](/articles/voa/1012277.md)
-
-9-26 [纽约市长埃里克·亚当斯因腐败调查遭到起诉](/articles/voa/1012278.md)
-
-9-26 [强化防灾与备战 台湾明年拟办“全社会”无剧本演习](/articles/voa/1012279.md)
 
