--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -27,6 +27,8 @@
 
 10-8 [财新｜入学五天后，他们纵身一跳](/articles/cdt/336567.md)
 
+10-8 [【CDT周报】第189期：国庆期间，上海没有砍人，西安没有下雪](/articles/cdt/336568.md)
+
 10-6 [【CDT报告汇】女权电影《芭比》出品方被爆出“剥削”中国女工（外二篇）](/articles/cdt/336573.md)
 
 10-6 [【重温】玖奌杂货店｜47年前的今天，粉碎“四人帮”，十年“文革”结束](/articles/cdt/336575.md)
@@ -598,6 +600,4 @@
 9-2 [七使2022｜路虎女与挨打男，背后的常识和法律](/articles/cdt/337467.md)
 
 9-2 [每日一语 2024.9.1](/articles/cdt/337480.md)
-
-9-2 [水瓶纪元｜一个中国女孩在蒙古遭受性侵之后](/articles/cdt/337484.md)
 
