--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-8 [文革中著名红卫兵领袖宋彬彬于美国去世](/articles/nyt/1042342.md)
+
 9-30 [电影《特工》原形：曾拒绝金正日敬酒的韩国间谍](/articles/nyt/1042343.md)
 
 9-30 [在香港，哪些行为会被判处“煽动叛乱”罪？](/articles/nyt/1042344.md)
@@ -598,6 +600,4 @@
 6-26 [韩国锂电池厂火灾：为何死者多为中国劳工](/articles/nyt/1042640.md)
 
 6-26 [中国企业IPO为何大幅减少](/articles/nyt/1042641.md)
-
-6-26 [中国人买买买造就东南亚“榴莲富豪”](/articles/nyt/1042642.md)
 
