--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,16 @@
 纽约时报
 ------
 
+10-8 [中国施压、外国抵制：在华外企陷入“新疆困境”](/articles/nyt/1042337.md)
+
+10-8 [中国股市创16年来最大单周涨幅](/articles/nyt/1042338.md)
+
+10-8 [为何马斯克这样的硅谷精英会支持特朗普](/articles/nyt/1042339.md)
+
+10-8 [廉价机票和被删除的信息：亚当斯案起诉书的10个关键细节](/articles/nyt/1042340.md)
+
+10-8 [Telegram如何成为犯罪分子和恐怖分子的游乐场](/articles/nyt/1042341.md)
+
 10-8 [文革中著名红卫兵领袖宋彬彬于美国去世](/articles/nyt/1042342.md)
 
 9-30 [电影《特工》原形：曾拒绝金正日敬酒的韩国间谍](/articles/nyt/1042343.md)
@@ -590,14 +600,4 @@
 6-27 [口误、金句、互相侮辱：美国总统大选辩论的经典时刻](/articles/nyt/1042635.md)
 
 6-27 [跨国品牌担心过度依赖中国，印度是未来吗？](/articles/nyt/1042636.md)
-
-6-27 [该严惩还是宽恕？未成年人犯罪在中国引发痛苦争论](/articles/nyt/1042637.md)
-
-6-26 [朝圣、音乐节、奥运会，极端酷热下的大型活动有多危险](/articles/nyt/1042638.md)
-
-6-26 [美国已不是世界老大](/articles/nyt/1042639.md)
-
-6-26 [韩国锂电池厂火灾：为何死者多为中国劳工](/articles/nyt/1042640.md)
-
-6-26 [中国企业IPO为何大幅减少](/articles/nyt/1042641.md)
 
