--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-8 [长平观察：吴慷仁“不再是一个人”](/articles/dw/1024079.md)
+
 10-8 [路透：中國解放軍擬在賴清德國慶演說後軍演](/articles/dw/1024080.md)
 
 10-7 [韩菲建立战略伙伴关系](/articles/dw/1024081.md)
@@ -598,6 +600,4 @@
 9-5 [交流或滲透？台灣青年到中國的不安與嚮往](/articles/dw/1024377.md)
 
 9-5 [前幕僚遭控效命北京 紐約州長要求驅逐中國總領事](/articles/dw/1024378.md)
-
-9-4 [乌克兰外长库列巴请辞 议会或周四做出决定](/articles/dw/1024379.md)
 
