--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-8 [金正恩称朝鲜将加速成为核武强国 再次威胁对韩、美动用核武](/articles/voa/1011968.md)
+
 10-8 [美台金融桌面演习 专家：习近平要让赖清德无法连任，一年半后即可能开始破坏台湾金融市场稳定](/articles/voa/1011969.md)
 
 10-8 [以色列在哈马斯恐袭一周年之际袭击加沙和黎巴嫩](/articles/voa/1011970.md)
@@ -598,6 +600,4 @@
 9-27 [内塔尼亚胡：以色列将继续打击真主党](/articles/voa/1012266.md)
 
 9-27 [国会两院共和党议员推出法案，拟取消对华投资的资本利得优惠税率，以鼓励从中国撤资](/articles/voa/1012267.md)
-
-9-27 [巴勒斯坦人领袖阿巴斯联大发言，呼吁停止向以色列运送武器](/articles/voa/1012268.md)
 
