--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-8 [加沙战争一周年：仇恨是唯一的赢家](/articles/nyt/1042336.md)
+
 10-8 [中国施压、外国抵制：在华外企陷入“新疆困境”](/articles/nyt/1042337.md)
 
 10-8 [中国股市创16年来最大单周涨幅](/articles/nyt/1042338.md)
@@ -598,6 +600,4 @@
 6-27 [中国网络信息战新策略：异见作家邓聿文之女遭网暴](/articles/nyt/1042634.md)
 
 6-27 [口误、金句、互相侮辱：美国总统大选辩论的经典时刻](/articles/nyt/1042635.md)
-
-6-27 [跨国品牌担心过度依赖中国，印度是未来吗？](/articles/nyt/1042636.md)
 
