--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-8 [中国国家发改委称对中国今年实现经济增长目标“充满信心”](/articles/voa/1011965.md)
+
+10-8 [中国的太平洋盟友基里巴斯罕见批评北京试射导弹](/articles/voa/1011966.md)
+
 10-8 [美国总统候选人哈里斯和特朗普纪念10月7日袭击事件一周年](/articles/voa/1011967.md)
 
 10-8 [金正恩称朝鲜将加速成为核武强国 再次威胁对韩、美动用核武](/articles/voa/1011968.md)
@@ -596,8 +600,4 @@
 9-27 [上海率先撒币5亿发消费券 中国网民却多不领情](/articles/voa/1012263.md)
 
 9-27 [抗衡中国影响力：美国会通过与太平洋盟友岛国的安全协议](/articles/voa/1012264.md)
-
-9-27 [纽约市长被联邦当局起诉，被控收受外国贿赂和非法竞选捐款](/articles/voa/1012265.md)
-
-9-27 [内塔尼亚胡：以色列将继续打击真主党](/articles/voa/1012266.md)
 
