--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-8 [倪刃｜从“不吹不黑”谈谈中文的劣质化](/articles/cdt/336517.md)
+
+10-8 [【404文库】每日乐评｜上海超市血案：背后缘由让人揪心](/articles/cdt/336518.md)
+
 10-8 [现实的模样｜怪事！机场出境未报备，索要100元给领导买烟被放行](/articles/cdt/336521.md)
 
 10-8 [每日一语 2024.10.6](/articles/cdt/336531.md)
@@ -596,8 +600,4 @@
 9-2 [张3丰的世界｜我妈每月养老金一百二](/articles/cdt/337459.md)
 
 9-2 [【异文观止】确山县人民政府｜今年农村换届选举，想要竞选村支书，一定要具备这几大条件](/articles/cdt/337464.md)
-
-9-2 [新新默存｜人民币汇率升值背后的真正秘密](/articles/cdt/337465.md)
-
-9-2 [七使2022｜路虎女与挨打男，背后的常识和法律](/articles/cdt/337467.md)
 
