--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-8 [法国内政部长：本拉登之子不得再次入境](/articles/dw/1024071.md)
+
 10-8 [“季风”继续吹拂: 上海季风书园华府重生](/articles/dw/1024072.md)
 
 10-8 [韩国国防部：朝鲜或派兵增援俄罗斯](/articles/dw/1024073.md)
@@ -598,6 +600,4 @@
 9-6 [翻墙罚款9000美元 巴西新规引爆争议](/articles/dw/1024369.md)
 
 9-6 [中國男足對戰日本史上最慘敗 實力差距多大？](/articles/dw/1024370.md)
-
-9-5 [慕尼黑警方在以领馆前击毙一名涉嫌伊斯兰主义者](/articles/dw/1024371.md)
 
