--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-9 [中国股市节后复盘首日未“狂飙”，发改委政策低于市场预期](/articles/voa/1011954.md)
+
+10-9 [北京有信心市场不买账，失望情绪从中国蔓延全球](/articles/voa/1011955.md)
+
 10-9 [比亚迪在印度设厂计划遇挑战，新德里对中企投资严格设限](/articles/voa/1011956.md)
 
 10-9 [美国鞋业巨头斯凯奇立足新疆受到人权倡导者批评](/articles/voa/1011957.md)
@@ -596,8 +600,4 @@
 9-27 [中国导弹试射后，斐济呼吁“尊重我们的地区”](/articles/voa/1012252.md)
 
 9-27 [澳大利亚财政部长访问北京 讨论贸易、投资和近期的刺激措施](/articles/voa/1012253.md)
-
-9-27 [美中外长将会晤，或讨论中企对俄罗斯供应无人机](/articles/voa/1012254.md)
-
-9-27 [中国央行降准以刺激贷款，沪港股劲扬](/articles/voa/1012255.md)
 
