--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-9 [入木三分谈｜别哭，给你注入正能量呢](/articles/cdt/336508.md)
+
 10-9 [衣者朝新｜将来“鞭尸”的好素材](/articles/cdt/336514.md)
 
 10-8 [倪刃｜从“不吹不黑”谈谈中文的劣质化](/articles/cdt/336517.md)
@@ -598,6 +600,4 @@
 9-2 [建设性意见｜同样的成分，进口药和国产药会有区别吗？](/articles/cdt/337455.md)
 
 9-2 [老牌恶棍｜适合“中国宝宝”敏感体质的AI，才是好AI](/articles/cdt/337457.md)
-
-9-2 [张3丰的世界｜我妈每月养老金一百二](/articles/cdt/337459.md)
 
