--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-9 [每日一语 2024.10.8](/articles/cdt/336504.md)
+
 10-9 [入木三分谈｜别哭，给你注入正能量呢](/articles/cdt/336508.md)
 
 10-9 [书写者｜瑞士伤害儿童者的心理动机：阿Q不知道自己恨谁爱谁](/articles/cdt/336511.md)
@@ -598,6 +600,4 @@
 9-2 [【网络民议】“房屋养老金不要老百姓直接出钱，可不可以理解为‘要老百姓间接出钱’呢？”](/articles/cdt/337450.md)
 
 9-2 [四环青年｜商户用工业硫磺熏枸杞，别总等媒体曝光才严查](/articles/cdt/337453.md)
-
-9-2 [建设性意见｜同样的成分，进口药和国产药会有区别吗？](/articles/cdt/337455.md)
 
