--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-9 [张3丰的世界｜“遮蔽”不会带来安全感](/articles/cdt/336490.md)
+
 10-9 [个人记忆库｜过去一年，中国人对外部世界的观感全面恶化](/articles/cdt/336496.md)
 
 10-9 [三联生活周刊｜餐饮业进入寒冬，你还舍得去餐馆吃饭吗？](/articles/cdt/336498.md)
@@ -598,6 +600,4 @@
 9-3 [城市的地得｜有一种真正的漠不关心](/articles/cdt/337429.md)
 
 9-3 [亮见｜发明“恶意返乡”的县长升官了，恭喜恭喜](/articles/cdt/337431.md)
-
-9-3 [老牌恶棍｜适合“中国宝宝”敏感体质的AI，才是好AI](/articles/cdt/337437.md)
 
