--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-10 [观察人士：中国制造的战斗机在缅甸军方的致命空袭中发挥关键作用](/articles/voa/1011915.md)
+
 10-10 [人权观察报告：中国试图噤声在日本的异议人士](/articles/voa/1011916.md)
 
 10-10 [泽连斯基将在巴黎会晤马克龙；马克龙探访在法受训乌军部队。](/articles/voa/1011917.md)
@@ -598,6 +600,4 @@
 9-29 [海伦飓风穿越美国东南部，造成至少52人死亡，几百万人断电](/articles/voa/1012213.md)
 
 9-29 [“这里的中文媒体比中共还中共”—中共纪念建政75周年，新西兰华人对渗透感到担忧](/articles/voa/1012214.md)
-
-9-29 [黎巴嫩寻呼机袭击事件源头调查扩大至保加利亚和挪威](/articles/voa/1012215.md)
 
