--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-10 [中国将结束对澳大利亚龙虾的贸易制裁](/articles/voa/1011910.md)
+
+10-10 [中国寻求加强与东盟经济联系 小马科斯提南中国海争端：不能假装一切都好](/articles/voa/1011911.md)
+
 10-10 [赖清德：中国无权代表台湾，双方应合作应对全球挑战](/articles/voa/1011912.md)
 
 10-10 [美国称台湾年度“双十”讲话不应成为中国军事施压的借口](/articles/voa/1011913.md)
@@ -596,8 +600,4 @@
 9-29 [台湾外交部谴责中国外长王毅于联合国大会上的涉台言论 重申台湾与中国互不隶属](/articles/voa/1012208.md)
 
 9-29 [中国如何通过深化政治和经济合作，扩大在孟加拉国的影响力](/articles/voa/1012209.md)
-
-9-29 [在联合国,俄罗斯没有显示准备讨论乌克兰和平的迹象](/articles/voa/1012210.md)
-
-9-29 [联大会议中国忙什么--力推乌战中国和平方案，捍卫“一中原则”，拉拢全球南方](/articles/voa/1012211.md)
 
