--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-10 [【404文库】闻道不分朝夕｜38年前，蒋经国松口“解严”，开放党禁报禁](/articles/cdt/336480.md)
+
 10-10 [【404文库】常识流通处｜一个医保局长之死](/articles/cdt/336482.md)
 
 10-10 [鱼眼观察｜监控对着意见箱，这事真够离谱的](/articles/cdt/336484.md)
@@ -598,6 +600,4 @@
 9-4 [忘川边的但丁｜那个视频里的孩子们，乖的如此冷漠](/articles/cdt/337413.md)
 
 9-4 [【网络民议】中房原董事长呼吁小产权房征房产税！网友：柿子捡软的捏，怎么不提议去征收豪宅税？](/articles/cdt/337414.md)
-
-9-4 [【404文库】【立此存照】凤凰网财经｜孟晓苏：从小产权房起征房产税，每年能收2万亿](/articles/cdt/337416.md)
 
