--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-10 [上合会议期间 巴基斯坦限制中国人出行](/articles/dw/1024052.md)
+
 10-10 [宝马和奔驰在中国市场销量大幅下滑](/articles/dw/1024053.md)
 
 10-10 [结束4年禁运 中国年底前恢复进口澳洲龙虾](/articles/dw/1024054.md)
@@ -598,6 +600,4 @@
 9-8 [巴西：封禁X平台引发的抗议浪潮加剧](/articles/dw/1024350.md)
 
 9-8 [普京：我家里有小孩能说流利的中文](/articles/dw/1024351.md)
-
-9-8 [威尼斯电影节闭幕：《隔壁房间》夺得金狮](/articles/dw/1024352.md)
 
