--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-10 [北约宣布将于下周一开始年度核演习](/articles/dw/1024047.md)
+
 10-10 [路透社：中国奇瑞接管大众、奔驰和日产在俄罗斯的生产线](/articles/dw/1024048.md)
 
 10-10 [客座評論﹕如果說留港傳媒被「馴化」了呢？](/articles/dw/1024049.md)
@@ -598,6 +600,4 @@
 9-9 [美媒：秦刚被任命出版社低阶职务](/articles/dw/1024345.md)
 
 9-9 [1972慕尼黑惨案周年之际 一名枪手被击毙](/articles/dw/1024346.md)
-
-9-9 [招手外商救經濟？中國放寬製造與醫療業限制](/articles/dw/1024347.md)
 
