--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-11 [每日一语 2024.10.10](/articles/cdt/336469.md)
+
 10-10 [每日一语 2024.10.9](/articles/cdt/336478.md)
 
 10-10 [【404文库】闻道不分朝夕｜38年前，蒋经国松口“解严”，开放党禁报禁](/articles/cdt/336480.md)
@@ -598,6 +600,4 @@
 9-4 [常识流通处｜很多进口药，悄无声息地消失了](/articles/cdt/337408.md)
 
 9-4 [【404文库】卖杏花｜没办法](/articles/cdt/337411.md)
-
-9-4 [忘川边的但丁｜那个视频里的孩子们，乖的如此冷漠](/articles/cdt/337413.md)
 
