--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-11 [中共立法将两岸历史记忆具体化 分析:文化“祖国”应被拆解](/articles/voa/1011880.md)
+
 10-11 [飓风米尔顿造成至少16人丧生，300多万人无电可用](/articles/voa/1011881.md)
 
 10-11 [欧洲理事会主席称中国必须“调整其行为”以解决贸易争端](/articles/voa/1011882.md)
@@ -598,6 +600,4 @@
 9-30 [真主党遭重创后，副党魁誓言继续对抗以色列](/articles/voa/1012178.md)
 
 9-30 [投资者害怕“错过车”，中国股市周一疯涨，创2008年来单日最大涨幅](/articles/voa/1012179.md)
-
-9-30 [拜登批准向台湾提供5.67亿美元军援，北京批美“严重违反”一中原则](/articles/voa/1012180.md)
 
