--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-11 [NBA希望重返中国](/articles/dw/1024042.md)
+
 10-11 [经济萧条：德国企业面临大甩卖？](/articles/dw/1024043.md)
 
 10-11 [联黎部队：遭到以色列袭击但决心坚守岗位](/articles/dw/1024044.md)
@@ -598,6 +600,4 @@
 9-10 [人权观察联手艾未未推出新作义卖](/articles/dw/1024340.md)
 
 9-10 [蘋果跟華為「打對台」 中國消費者更屬意誰？](/articles/dw/1024341.md)
-
-9-9 [国安忧虑：美佐治亚理工将退出与天津大学合作](/articles/dw/1024342.md)
 
