--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+10-11 [特朗普与普京：关系比想象中更为密切？](/articles/dw/1024039.md)
+
+10-11 [长平漫游：我们的读书小组](/articles/dw/1024040.md)
+
+10-11 [德國和美國是堅固的同盟嗎？](/articles/dw/1024041.md)
+
 10-11 [NBA希望重返中国](/articles/dw/1024042.md)
 
 10-11 [经济萧条：德国企业面临大甩卖？](/articles/dw/1024043.md)
@@ -594,10 +600,4 @@
 9-10 [欧洲竞争报告中的中国因素](/articles/dw/1024337.md)
 
 9-10 [德国政界激辩移民政策 内政部长下令全面临时边境检查](/articles/dw/1024338.md)
-
-9-10 [巴黎2024——残奥会带来的感动](/articles/dw/1024339.md)
-
-9-10 [人权观察联手艾未未推出新作义卖](/articles/dw/1024340.md)
-
-9-10 [蘋果跟華為「打對台」 中國消費者更屬意誰？](/articles/dw/1024341.md)
 
