--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-11 [中国国庆档电影缺爆款，票房回暖乏力、消费卷补贴也难救](/articles/voa/1011879.md)
+
 10-11 [中共立法将两岸历史记忆具体化 分析:文化“祖国”应被拆解](/articles/voa/1011880.md)
 
 10-11 [飓风米尔顿造成至少16人丧生，300多万人无电可用](/articles/voa/1011881.md)
@@ -598,6 +600,4 @@
 9-30 [有一位英国法官不再续任香港终审法院非常任法官](/articles/voa/1012177.md)
 
 9-30 [真主党遭重创后，副党魁誓言继续对抗以色列](/articles/voa/1012178.md)
-
-9-30 [投资者害怕“错过车”，中国股市周一疯涨，创2008年来单日最大涨幅](/articles/voa/1012179.md)
 
