--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-11 [【CDT报告汇】人权观察：中国政府跨国镇压手段以威胁在华亲属为主（外二篇）](/articles/cdt/336463.md)
+
 10-11 [读库老六｜我并不是不想进入股市](/articles/cdt/336467.md)
 
 10-11 [每日一语 2024.10.10](/articles/cdt/336469.md)
@@ -598,6 +600,4 @@
 9-5 [那个NG｜谷爱凌：从天才少女到双面人“谷圣”](/articles/cdt/337380.md)
 
 9-6 [【CDT报告汇】美国大选在即，中共利用虚假账号挑拨两党选民左右互搏 （外二篇）](/articles/cdt/337381.md)
-
-9-5 [唐师三百手｜第一次课，讲到了被封号的贞观文章](/articles/cdt/337383.md)
 
