--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-11 [中国股市三大指数集体下跌，市场关注周六财政部能否放大招](/articles/voa/1011875.md)
+
+10-11 [布林肯警告中国不得对台挑衅，称所有东盟国家希望台海稳定](/articles/voa/1011876.md)
+
 10-11 [对全球拥核国家发出警告：2024年度诺贝尔和平奖授予日本核爆幸存者组织](/articles/voa/1011877.md)
 
 10-11 [南中国海紧张局势升级给全球贸易带来风险](/articles/voa/1011878.md)
@@ -596,8 +600,4 @@
 10-1 [中国要在风险与挑战重重的南苏丹建现代化炼油厂为哪般？](/articles/voa/1012173.md)
 
 10-1 [中国A股“贺国庆”创史上最高 分析：短期奏效 长期无助](/articles/voa/1012174.md)
-
-10-1 [黄金周中国旅游业难以赚得盆满钵满，专家：能持平去年就满意](/articles/voa/1012175.md)
-
-10-1 [北约秘书长：普京涉核言论鲁莽，北约不会停止对乌克兰的支持](/articles/voa/1012176.md)
 
