--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-12 [难得君｜数倍超速撞人致一家三口灭门，竟无人报道](/articles/cdt/336453.md)
+
+10-12 [走读新生｜这样肆无忌惮的明抢，就不怕遭报应吗？](/articles/cdt/336455.md)
+
+10-12 [每日一语 2024.10.11](/articles/cdt/336458.md)
+
+10-12 [【404文库】法度Law｜褚朝新：他如此善于“打脸“是有原因的](/articles/cdt/336459.md)
+
 10-11 [【CDT报告汇】人权观察：中国政府跨国镇压手段以威胁在华亲属为主（外二篇）](/articles/cdt/336463.md)
 
 10-11 [读库老六｜我并不是不想进入股市](/articles/cdt/336467.md)
@@ -592,12 +600,4 @@
 9-6 [【旧文重温】学习小组｜中国足球有救了！习近平谈足球改革](/articles/cdt/337371.md)
 
 9-6 [每日一语 2024.9.4](/articles/cdt/337374.md)
-
-9-5 [情况有点复杂｜第14天坐牢，无人知晓他何等罪名](/articles/cdt/337376.md)
-
-9-5 [老萧杂说｜凭啥宣誓“不对老师甩脸子”，凭啥承诺对霸凌“不拍不录”](/articles/cdt/337378.md)
-
-9-5 [那个NG｜谷爱凌：从天才少女到双面人“谷圣”](/articles/cdt/337380.md)
-
-9-6 [【CDT报告汇】美国大选在即，中共利用虚假账号挑拨两党选民左右互搏 （外二篇）](/articles/cdt/337381.md)
 
