--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+10-12 [一名美军士兵因企图协助“伊斯兰国”而被判处14年监禁](/articles/voa/1011863.md)
+
+10-12 [消息人士：中国与越南将签署铁路和农业协议](/articles/voa/1011864.md)
+
+10-12 [飓风米尔顿造成16人死亡与数百万用户断电](/articles/voa/1011865.md)
+
+10-12 [乌克兰总统访问德国与梵蒂冈](/articles/voa/1011866.md)
+
+10-12 [联合国警告说，不断扩大的中东冲突威胁数百万人健康](/articles/voa/1011867.md)
+
 10-12 [美两党议员要求电信公司汇报中国黑客入侵事件](/articles/voa/1011868.md)
 
 10-12 [美国总统大选愈加扑朔迷离，什么样的“十月惊奇”会搅局选情？](/articles/voa/1011869.md)
@@ -590,14 +600,4 @@
 10-1 [受损的北卡罗来纳州有数百人在海伦飓风过后依然失踪](/articles/voa/1012161.md)
 
 10-1 [前总统卡特迎来百岁大寿，其政治遗产获重新评价](/articles/voa/1012162.md)
-
-10-1 [中国股市受刺激措施推动飙升,美国股市第三季度创新高](/articles/voa/1012163.md)
-
-10-1 [国事光析：“人民”为何成为专制的招牌？—— 中华人民共和国75周年祝辞](/articles/voa/1012164.md)
-
-10-1 [以色列对真主党发动地面突击行动](/articles/voa/1012165.md)
-
-10-1 [分析人士：升级的冲突考验中国的中东政策](/articles/voa/1012166.md)
-
-10-1 [拜登行政当局将延长美墨边境的庇护禁令](/articles/voa/1012167.md)
 
