--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-12 [客座评论：残雪、韩江与诺贝尔文学奖](/articles/dw/1024033.md)
+
 10-11 [联合国驻黎巴嫩部队遭以军袭击 – 各方如何回应？](/articles/dw/1024034.md)
 
 10-11 [马来西亚榴莲热: 中国开放进口引爆销售热潮](/articles/dw/1024035.md)
@@ -598,6 +600,4 @@
 9-11 [第一次正面對決 賀錦麗與川普激辯中國政策](/articles/dw/1024331.md)
 
 9-10 [0比7之后 中国足球界开始新一轮整肃](/articles/dw/1024332.md)
-
-9-10 [德国大众30年来未有：员工金饭碗不再](/articles/dw/1024333.md)
 
