--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-12 [木蹊说｜“买的伟大，套的光荣”，大A惊现卧龙凤雏](/articles/cdt/336441.md)
+
 10-12 [难得君｜数倍超速撞人致一家三口灭门，竟无人报道](/articles/cdt/336453.md)
 
 10-12 [走读新生｜这样肆无忌惮的明抢，就不怕遭报应吗？](/articles/cdt/336455.md)
@@ -598,6 +600,4 @@
 9-6 [每日一语 2024.9.5](/articles/cdt/337369.md)
 
 9-6 [【旧文重温】学习小组｜中国足球有救了！习近平谈足球改革](/articles/cdt/337371.md)
-
-9-6 [每日一语 2024.9.4](/articles/cdt/337374.md)
 
