--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-12 [中国财长“大招”不过如此，发债化债“稳”为先，股民死活顾不上](/articles/voa/1011855.md)
+
 10-12 [波音公司计划裁员10%，预计第三季度大幅亏损](/articles/voa/1011856.md)
 
 10-12 [卫报：英国担忧惹怒中国 推迟了台湾前总统蔡英文的访问](/articles/voa/1011857.md)
@@ -598,6 +600,4 @@
 10-1 [俄罗斯计划在2025年大幅增加国防开支](/articles/voa/1012153.md)
 
 10-1 [上海超市持刀袭击事件致3死15伤](/articles/voa/1012154.md)
-
-10-1 [韩国国军日阅兵活动登场 朝鲜谴责美国部署核战略武器](/articles/voa/1012155.md)
 
