--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -7,6 +7,8 @@
 
 10-12 [【网络民议】你的经济条件甚至不如20年前的野原广志？](/articles/cdt/336434.md)
 
+10-12 [玖奌杂货铺｜她揭露黑暗获得诺贝尔文学奖，没有人指责她抹黑韩国](/articles/cdt/336439.md)
+
 10-12 [木蹊说｜“买的伟大，套的光荣”，大A惊现卧龙凤雏](/articles/cdt/336441.md)
 
 10-12 [难得君｜数倍超速撞人致一家三口灭门，竟无人报道](/articles/cdt/336453.md)
@@ -598,6 +600,4 @@
 9-6 [习惯与成文｜官方新闻通稿中的符拉迪沃斯托克和海参崴命名取舍](/articles/cdt/337362.md)
 
 9-6 [冰川思享号｜多地国道恢复收费，更棘手的还在后面](/articles/cdt/337364.md)
-
-9-6 [观人随笔｜让我感到羞愧的，不是中国足球](/articles/cdt/337366.md)
 
