--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-12 [美欧敦促以色列停止攻击联合维和部队，美对以黎冲突态度似有变化](/articles/voa/1011854.md)
+
 10-12 [中国财长“大招”不过如此，发债化债“稳”为先，股民死活顾不上](/articles/voa/1011855.md)
 
 10-12 [波音公司计划裁员10%，预计第三季度大幅亏损](/articles/voa/1011856.md)
@@ -598,6 +600,4 @@
 10-1 [调查网络诈骗的柬埔寨获奖记者被捕](/articles/voa/1012152.md)
 
 10-1 [俄罗斯计划在2025年大幅增加国防开支](/articles/voa/1012153.md)
-
-10-1 [上海超市持刀袭击事件致3死15伤](/articles/voa/1012154.md)
 
