--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-13 [路透社：中俄阻挠东亚峰会联合声明](/articles/dw/1024018.md)
+
+10-13 [中越总理举行会晤 双方签署十项合作协议](/articles/dw/1024019.md)
+
 10-13 [客座评论：金砖组织面临“成长的烦恼” 中印俄各打算盘](/articles/dw/1024020.md)
 
 10-13 [中国的经济刺激计划能否推动德国经济增长？](/articles/dw/1024021.md)
@@ -596,8 +600,4 @@
 9-12 [欧中电动车关税谈判在即 西班牙突然转向](/articles/dw/1024316.md)
 
 9-12 [愿看到“祖国母亲成功”前CIA特工对华泄密获刑十年](/articles/dw/1024317.md)
-
-9-12 [曾被鲨鱼咬断腿 美国游泳选手残奥夺银](/articles/dw/1024318.md)
-
-9-12 [为什么肖尔茨总理突然呼吁尽快实现乌克兰和平？](/articles/dw/1024319.md)
 
