--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-13 [勿忘时代英雄 追思高耀洁医师 纽约举办新书发表会](/articles/voa/1011841.md)
+
+10-13 [哈里斯公布“健康状况极佳”的报告 凸显医疗报告不透明的特朗普](/articles/voa/1011842.md)
+
 10-13 [冲突加剧之际 联合国官员呼吁保持黎巴嫩港口和机场运作](/articles/voa/1011843.md)
 
 10-13 [美国官员指称俄罗斯和中国阻挠东亚峰会声明的发表](/articles/voa/1011844.md)
@@ -596,8 +600,4 @@
 10-2 [美国两位副总统候选人周二晚面对面交锋，料将火花四溅，美国之音实况转播](/articles/voa/1012139.md)
 
 10-2 [印度高级将领：印中边境虽然稳定但不正常，两国失去信任是最大损失](/articles/voa/1012140.md)
-
-10-1 [白宫官员：伊朗即将对以色列发动弹道导弹袭击](/articles/voa/1012141.md)
-
-10-1 [中间谍案频发加剧德中紧张关系，又一名华裔在德国被捕](/articles/voa/1012142.md)
 
